// Package aimodel AIæ¨¡å‹éƒ¨ç½²å®ç°
//
// ğŸ¯ **æ¨¡å—å®šä½**ï¼šAIModelService æ¥å£çš„AIæ¨¡å‹éƒ¨ç½²åŠŸèƒ½å®ç°
//
// æœ¬æ–‡ä»¶å®ç°AIæ¨¡å‹éƒ¨ç½²çš„æ ¸å¿ƒä¸šåŠ¡é€»è¾‘ï¼ŒåŒ…æ‹¬ï¼š
// - ONNX/TensorFlow AIæ¨¡å‹éƒ¨ç½²ï¼ˆDeployAIModelï¼‰
// - æ¨¡å‹æ ¼å¼éªŒè¯å’Œå…¼å®¹æ€§æ£€æŸ¥
// - æ¨¡å‹æ‰§è¡Œé…ç½®å’Œæ€§èƒ½ä¼˜åŒ–
// - æ¨¡å‹æƒé™å’Œè®¿é—®æ§åˆ¶è®¾ç½®
// - æ¨¡å‹ç”Ÿå‘½å‘¨æœŸç®¡ç†
//
// ğŸ—ï¸ **æ¶æ„å®šä½**ï¼š
// - ä¸šåŠ¡å±‚ï¼šå®ç°AIæ¨¡å‹çš„éƒ¨ç½²ä¸šåŠ¡é€»è¾‘
// - æ‰§è¡Œå±‚ï¼šä¸AIæ¨¡å‹æ‰§è¡Œå¼•æ“çš„é›†æˆ
// - å­˜å‚¨å±‚ï¼šæ¨¡å‹æ–‡ä»¶çš„å†…å®¹å¯»å€å­˜å‚¨
// - æƒé™å±‚ï¼šæ¨¡å‹çš„åˆå§‹è®¿é—®æ§åˆ¶å’Œä½¿ç”¨æˆæƒ
//
// ğŸ”§ **è®¾è®¡åŸåˆ™**ï¼š
// - æ ¼å¼å…¼å®¹ï¼šæ”¯æŒä¸»æµAIæ¨¡å‹æ ¼å¼ï¼ˆONNXã€TensorFlowç­‰ï¼‰
// - æ€§èƒ½å¯æ§ï¼šæ”¯æŒæ¨¡å‹å¤§å°é™åˆ¶å’Œæ¨ç†æ€§èƒ½é…ç½®
// - æƒé™çµæ´»ï¼šæ”¯æŒå…¬å¼€ã€ç§æœ‰ã€æŒ‰æ¬¡ä»˜è´¹ç­‰å¤šç§è®¿é—®æ¨¡å¼
// - æ ‡å‡†åŒ–ï¼šéµå¾ªAIæ¨¡å‹éƒ¨ç½²çš„è¡Œä¸šæœ€ä½³å®è·µ
//
// ğŸ“‹ **æ”¯æŒçš„æ¨¡å‹æ ¼å¼**ï¼š
// - ONNX æ¨¡å‹ï¼šè·¨å¹³å°çš„æœºå™¨å­¦ä¹ æ¨¡å‹æ ¼å¼
// - TensorFlow æ¨¡å‹ï¼šGoogleçš„æœºå™¨å­¦ä¹ æ¡†æ¶æ¨¡å‹
// - PyTorch æ¨¡å‹ï¼šFacebookçš„æ·±åº¦å­¦ä¹ æ¡†æ¶æ¨¡å‹
// - å…¶ä»–æ ‡å‡†æ ¼å¼ï¼šé€šè¿‡é…ç½®æ‰©å±•æ”¯æŒ
//
// ğŸ¯ **ä¸å…¶ä»–èµ„æºçš„åŒºåˆ«**ï¼š
// - AIæ¨¡å‹ï¼šResourceCategory.EXECUTABLE + ExecutableType.AIMODEL
// - æ™ºèƒ½åˆçº¦ï¼šResourceCategory.EXECUTABLE + ExecutableType.CONTRACT
// - é™æ€èµ„æºï¼šResourceCategory.STATICï¼Œæ— æ‰§è¡Œèƒ½åŠ›
// - AIæ¨¡å‹å…·å¤‡æ¨ç†è®¡ç®—èƒ½åŠ›ï¼Œä½†ä¸å…·å¤‡çŠ¶æ€ç®¡ç†èƒ½åŠ›
//
// âš ï¸ **å®ç°çŠ¶æ€**ï¼š
// å½“å‰ä¸ºè–„å®ç°é˜¶æ®µï¼Œæä¾›æ¥å£éª¨æ¶å’ŒåŸºç¡€éªŒè¯
// å®Œæ•´ä¸šåŠ¡é€»è¾‘å°†åœ¨åç»­è¿­ä»£ä¸­å®ç°
package aimodel

import (
	"context"
	"crypto/sha256"
	"encoding/hex"
	"fmt"
	"os"
	"strconv"
	"time"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/repository"
	"github.com/weisyn/v1/pkg/types"

	// åè®®å®šä¹‰
	"github.com/weisyn/v1/pb/blockchain/block/transaction"
	resourcepb "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pb/blockchain/utxo"

	// å†…éƒ¨å·¥å…·
	"github.com/weisyn/v1/internal/core/blockchain/transaction/internal"
	"github.com/weisyn/v1/pkg/utils"

	// åŸºç¡€è®¾æ–½
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
)

// ============================================================================
//
//	AIæ¨¡å‹éƒ¨ç½²å®ç°æœåŠ¡
//
// ============================================================================
// AIModelDeployService AIæ¨¡å‹éƒ¨ç½²æ ¸å¿ƒå®ç°æœåŠ¡
//
// ğŸ¯ **æœåŠ¡èŒè´£**ï¼š
// - å®ç° AIModelService.DeployAIModel æ–¹æ³•
// - å¤„ç†å„ç±»AIæ¨¡å‹çš„éªŒè¯ã€éƒ¨ç½²å’Œé…ç½®
// - ç®¡ç†æ¨¡å‹çš„å†…å®¹å¯»å€å­˜å‚¨å’Œæ‰§è¡Œå‚æ•°
// - è®¾ç½®æ¨¡å‹çš„åˆå§‹è®¿é—®æƒé™å’Œä½¿ç”¨æ§åˆ¶
//
// ğŸ”§ **ä¾èµ–æ³¨å…¥**ï¼š
// - modelValidatorï¼šAIæ¨¡å‹æ ¼å¼éªŒè¯æœåŠ¡
// - contentAddressStoreï¼šå†…å®¹å¯»å€å­˜å‚¨æœåŠ¡
// - utxoSelectorï¼šUTXO é€‰æ‹©å’Œç®¡ç†æœåŠ¡
// - feeCalculatorï¼šè´¹ç”¨è®¡ç®—æœåŠ¡
// - cacheStoreï¼šäº¤æ˜“ç¼“å­˜å­˜å‚¨
// - loggerï¼šæ—¥å¿—è®°å½•æœåŠ¡
//
// ğŸ“ **ä½¿ç”¨ç¤ºä¾‹**ï¼š
//
//	service := NewAIModelDeployService(validator, contentStore, utxoSelector, feeCalc, cache, logger)
//	txHash, err := service.DeployAIModel(ctx, deployer, onnxModel, options...)
type AIModelDeployService struct {
	// æ ¸å¿ƒä¾èµ–æœåŠ¡ï¼ˆä½¿ç”¨å…¬å…±æ¥å£ï¼‰
	utxoManager     repository.UTXOManager     // UTXO ç®¡ç†æœåŠ¡
	resourceManager repository.ResourceManager // èµ„æºå­˜å‚¨ç®¡ç†æœåŠ¡
	hashManager     crypto.HashManager         // å“ˆå¸Œè®¡ç®—æœåŠ¡
	keyManager      crypto.KeyManager          // å¯†é’¥ç®¡ç†æœåŠ¡ï¼ˆç”¨äºä»ç§é’¥ç”Ÿæˆå…¬é’¥ï¼‰
	addressManager  crypto.AddressManager      // åœ°å€ç®¡ç†æœåŠ¡ï¼ˆç”¨äºä»å…¬é’¥ç”Ÿæˆåœ°å€ï¼‰
	cacheStore      storage.MemoryStore        // å†…å­˜ç¼“å­˜å­˜å‚¨
	logger          log.Logger                 // æ—¥å¿—è®°å½•å™¨
}

// NewAIModelDeployService åˆ›å»ºAIæ¨¡å‹éƒ¨ç½²æœåŠ¡å®ä¾‹
//
// ğŸ—ï¸ **æ„é€ å™¨æ¨¡å¼**ï¼š
// ä½¿ç”¨ä¾èµ–æ³¨å…¥åˆ›å»ºæœåŠ¡å®ä¾‹ï¼Œç¡®ä¿æ‰€æœ‰ä¾èµ–éƒ½å·²æ­£ç¡®åˆå§‹åŒ–
//
// å‚æ•°ï¼š
//   - modelValidator: AIæ¨¡å‹æ ¼å¼éªŒè¯æœåŠ¡
//   - contentAddressStore: å†…å®¹å¯»å€å­˜å‚¨æœåŠ¡
//   - utxoSelector: UTXO é€‰æ‹©å’Œç®¡ç†æœåŠ¡
//   - feeCalculator: è´¹ç”¨è®¡ç®—æœåŠ¡
//   - cacheStore: äº¤æ˜“ç¼“å­˜å­˜å‚¨æœåŠ¡
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - *AIModelDeployService: AIæ¨¡å‹éƒ¨ç½²æœåŠ¡å®ä¾‹
//
// ğŸš¨ **æ³¨æ„äº‹é¡¹**ï¼š
// æ‰€æœ‰ä¾èµ–å‚æ•°éƒ½ä¸èƒ½ä¸º nilï¼Œå¦åˆ™ panic
func NewAIModelDeployService(
	utxoManager repository.UTXOManager,
	resourceManager repository.ResourceManager,
	hashManager crypto.HashManager,
	keyManager crypto.KeyManager,
	addressManager crypto.AddressManager,
	cacheStore storage.MemoryStore,
	logger log.Logger,
) *AIModelDeployService {
	// ä¸¥æ ¼çš„ä¾èµ–æ£€æŸ¥
	if logger == nil {
		panic("AIModelDeployService: loggerä¸èƒ½ä¸ºnil")
	}
	if utxoManager == nil {
		logger.Warn("AIModelDeployService: utxoManagerä¸ºnilï¼ŒæŸäº›åŠŸèƒ½å°†ä¸å¯ç”¨")
	}
	if resourceManager == nil {
		panic("AIModelDeployService: resourceManagerä¸èƒ½ä¸ºnil")
	}
	if cacheStore == nil {
		logger.Warn("AIModelDeployService: cacheStoreä¸ºnilï¼ŒæŸäº›åŠŸèƒ½å°†ä¸å¯ç”¨")
	}

	return &AIModelDeployService{
		utxoManager:     utxoManager,
		resourceManager: resourceManager,
		hashManager:     hashManager,
		keyManager:      keyManager,
		addressManager:  addressManager,
		cacheStore:      cacheStore,
		logger:          logger,
	}
}

// ============================================================================
//
//	æ ¸å¿ƒæ¨¡å‹éƒ¨ç½²æ–¹æ³•å®ç°
//
// ============================================================================
// DeployAIModel å®ç°AIæ¨¡å‹éƒ¨ç½²åŠŸèƒ½ï¼ˆè–„å®ç°ï¼‰
//
// ğŸ¯ **æ–¹æ³•èŒè´£**ï¼š
// å®ç° blockchain.AIModelService.DeployAIModel æ¥å£
// æ”¯æŒå„ç±»AIæ¨¡å‹çš„å®‰å…¨éƒ¨ç½²å’Œé…ç½®
//
// ğŸ“‹ **ä¸šåŠ¡æµç¨‹**ï¼š
// 1. éªŒè¯AIæ¨¡å‹æ•°æ®çš„æ ¼å¼å’Œå®Œæ•´æ€§
// 2. è§£ææ¨¡å‹çš„è¾“å…¥è¾“å‡ºè§„æ ¼
// 3. è®¡ç®—æ¨¡å‹çš„å†…å®¹å“ˆå¸Œ
// 4. å°†æ¨¡å‹æ–‡ä»¶å­˜å‚¨åˆ°å†…å®¹å¯»å€ç½‘ç»œ
// 5. æ„å»º ResourceOutputï¼ˆExecutableType.AIMODELï¼‰
// 6. é…ç½®æ¨¡å‹çš„æ‰§è¡Œç¯å¢ƒå‚æ•°
// 7. è®¾ç½®æ¨¡å‹çš„åˆå§‹è®¿é—®æƒé™
// 8. é€‰æ‹©éƒ¨ç½²è´¹ç”¨çš„æ”¯ä»˜ UTXO
// 9. å°†éƒ¨ç½²äº¤æ˜“å­˜å‚¨åˆ°å†…å­˜ç¼“å­˜
// 10. è¿”å›äº¤æ˜“å“ˆå¸Œä¾›ç”¨æˆ·ç­¾å
//
// ğŸ“ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼Œç”¨äºè¶…æ—¶æ§åˆ¶å’Œå–æ¶ˆæ“ä½œ
//   - deployerAddress: æ¨¡å‹éƒ¨ç½²è€…åœ°å€
//   - modelData: AIæ¨¡å‹çš„äºŒè¿›åˆ¶æ•°æ®ï¼ˆONNX/TensorFlowç­‰æ ¼å¼ï¼‰
//   - options: å¯é€‰çš„éƒ¨ç½²é€‰é¡¹ï¼ˆæƒé™æ§åˆ¶ã€æ€§èƒ½é…ç½®ã€æ”¶è´¹æ¨¡å¼ç­‰ï¼‰
//
// ğŸ“¤ **è¿”å›å€¼**ï¼š
//   - []byte: äº¤æ˜“å“ˆå¸Œï¼Œç”¨äºåç»­ç­¾åå’Œæäº¤
//   - error: é”™è¯¯ä¿¡æ¯ï¼Œéƒ¨ç½²å¤±è´¥æ—¶è¿”å›å…·ä½“åŸå› 
//
// ğŸ¯ **æ”¯æŒåœºæ™¯**ï¼š
// - å›¾åƒåˆ†ç±»æ¨¡å‹ï¼šDeployAIModel(ctx, deployer, resnetModel)
// - è‡ªç„¶è¯­è¨€å¤„ç†ï¼šDeployAIModel(ctx, deployer, bertModel, &types.ResourceDeployOptions{...})
// - ä¼ä¸šAIæœåŠ¡ï¼šDeployAIModel(ctx, deployer, customModel, &types.ResourceDeployOptions{BusinessModel: {...}})
// - ä»˜è´¹æ¨ç†æœåŠ¡ï¼šDeployAIModel(ctx, deployer, gptModel, &types.ResourceDeployOptions{FeeControl: {...}})
//
// ğŸ’¡ **AIç‰¹æ€§**ï¼š
// - æ ¼å¼éªŒè¯ï¼šç¡®ä¿æ¨¡å‹æ ¼å¼æ­£ç¡®æ€§å’Œå…¼å®¹æ€§
// - æ€§èƒ½é¢„æµ‹ï¼šè¯„ä¼°æ¨¡å‹æ¨ç†æ€§èƒ½å’Œèµ„æºéœ€æ±‚
// - è‡ªåŠ¨é…ç½®ï¼šæ™ºèƒ½æ¨å¯¼è¾“å…¥è¾“å‡ºè§„æ ¼
// - æƒé™çµæ´»ï¼šæ”¯æŒå¤šç§è®¿é—®å’Œè®¡è´¹æ¨¡å¼
//
// âš ï¸ **å½“å‰çŠ¶æ€**ï¼šè–„å®ç°ï¼Œè¿”å›æœªå®ç°é”™è¯¯
func (s *AIModelDeployService) DeployAIModel(
	ctx context.Context,
	deployerPrivateKey []byte,
	modelFilePath string,
	config *resourcepb.AIModelExecutionConfig,
	name string,
	description string,
	options ...*types.ResourceDeployOptions,
) ([]byte, error) {
	// ä»ç§é’¥è®¡ç®—éƒ¨ç½²è€…åœ°å€ï¼ˆæ— çŠ¶æ€è®¾è®¡ï¼‰
	deployerAddress, err := s.calculateAddressFromPrivateKey(deployerPrivateKey)
	if err != nil {
		return nil, fmt.Errorf("ä»ç§é’¥è®¡ç®—åœ°å€å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("ğŸš€ å¼€å§‹å¤„ç†AIæ¨¡å‹éƒ¨ç½²è¯·æ±‚ - name: %s, æ–‡ä»¶è·¯å¾„: %s",
			name, modelFilePath))
	}

	// ğŸ”§ æ­¥éª¤1: åˆå¹¶éƒ¨ç½²é€‰é¡¹
	mergedOptions, _, err := s.mergeDeployOptionsWithAddress(options)
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²é€‰é¡¹å¤„ç†å¤±è´¥: %v", err)
	}

	// ğŸ§® æ­¥éª¤2: å­˜å‚¨æ¨¡å‹æ–‡ä»¶åˆ°ResourceManagerå¹¶è·å–å†…å®¹å“ˆå¸Œ
	metadata := map[string]string{
		"resource_type":   "aimodel",
		"name":            name,
		"description":     description,
		"creator_address": deployerAddress,
		"model_format":    "unknown", // å°†åœ¨éªŒè¯åæ›´æ–°
	}

	contentHashBytes, err := s.resourceManager.StoreResourceFile(ctx, modelFilePath, metadata)
	if err != nil {
		return nil, fmt.Errorf("å­˜å‚¨AIæ¨¡å‹æ–‡ä»¶å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("âœ… AIæ¨¡å‹æ–‡ä»¶å·²å­˜å‚¨ - content_hash: %x", contentHashBytes))
	}

	// ğŸ” æ­¥éª¤3: è¯»å–æ¨¡å‹æ–‡ä»¶è¿›è¡Œæ ¼å¼éªŒè¯
	modelBytes, err := os.ReadFile(modelFilePath)
	if err != nil {
		return nil, fmt.Errorf("è¯»å–æ¨¡å‹æ–‡ä»¶å¤±è´¥: %v", err)
	}

	// ğŸ”„ æ­¥éª¤4: åŸºç¡€å‚æ•°éªŒè¯
	if err := s.validateDeployParams(modelBytes, config, name, description, options); err != nil {
		return nil, fmt.Errorf("å‚æ•°éªŒè¯å¤±è´¥: %v", err)
	}

	// ğŸ” æ­¥éª¤5: æ·±åº¦éªŒè¯æ¨¡å‹æ ¼å¼
	modelFormat, err := s.validateModelFormat(modelBytes)
	if err != nil {
		return nil, fmt.Errorf("æ¨¡å‹æ ¼å¼éªŒè¯å¤±è´¥: %v", err)
	}

	// ğŸ“ æ­¥éª¤5: è§£æéƒ¨ç½²è€…åœ°å€
	deployerAddrBytes, err := s.parseAddress(deployerAddress)
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²è€…åœ°å€è§£æå¤±è´¥: %v", err)
	}

	// ğŸ—ï¸ æ­¥éª¤6: æ„å»ºAIæ¨¡å‹èµ„æºå®šä¹‰
	aiModelResource, err := s.buildAIModelResourceComplete(deployerAddress, modelBytes, modelFormat, config, name, description, contentHashBytes, mergedOptions)
	if err != nil {
		return nil, fmt.Errorf("AIæ¨¡å‹èµ„æºæ„å»ºå¤±è´¥: %v", err)
	}

	// ğŸ’° æ­¥éª¤7: é€‰æ‹©éƒ¨ç½²è´¹ç”¨çš„UTXOï¼ˆä½¿ç”¨åŸç”Ÿä»£å¸ï¼‰
	deploymentFee := s.estimateDeploymentFee(len(modelBytes))
	selectedInputs, changeAmount, err := s.selectUTXOsForModelDeploy(
		ctx, deployerAddrBytes, deploymentFee, "") // åŸç”Ÿä»£å¸
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²è´¹ç”¨UTXOé€‰æ‹©å¤±è´¥: %v", err)
	}

	// ğŸ—ï¸ æ­¥éª¤8: æ„å»ºAIæ¨¡å‹éƒ¨ç½²è¾“å‡º
	outputs, err := s.buildAIModelOutputs(deployerAddress, aiModelResource, changeAmount, mergedOptions)
	if err != nil {
		return nil, fmt.Errorf("AIæ¨¡å‹è¾“å‡ºæ„å»ºå¤±è´¥: %v", err)
	}

	// ğŸ”„ æ­¥éª¤9: æ„å»ºå®Œæ•´äº¤æ˜“
	tx, err := s.buildCompleteTransaction(selectedInputs, outputs)
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºå®Œæ•´äº¤æ˜“å¤±è´¥: %v", err)
	}

	// ğŸ”„ æ­¥éª¤A: è®¡ç®—äº¤æ˜“å“ˆå¸Œå¹¶ç¼“å­˜
	txHash, err := s.cacheTransaction(ctx, tx)
	if err != nil {
		return nil, fmt.Errorf("ç¼“å­˜äº¤æ˜“å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Info(fmt.Sprintf("âœ… AIæ¨¡å‹éƒ¨ç½²äº¤æ˜“æ„å»ºå®Œæˆ - txHash: %x, name: %s, æ¨¡å‹å“ˆå¸Œ: %x, è´¹ç”¨: %s",
			txHash, name, contentHashBytes, deploymentFee))
	}

	return txHash, nil
}

// ============================================================================
//
//	ç§æœ‰è¾…åŠ©æ–¹æ³•
//
// ============================================================================
// detectModelFormat æ£€æµ‹AIæ¨¡å‹çš„æ ¼å¼ç±»å‹
//
// ğŸ” **æ£€æµ‹ç­–ç•¥**ï¼š
// - ONNX æ¨¡å‹ï¼šæ£€æŸ¥é­”æ•°å’Œç‰ˆæœ¬ä¿¡æ¯
// - TensorFlow æ¨¡å‹ï¼šæ£€æŸ¥ saved_model.pb æˆ– .h5 æ ¼å¼
// - PyTorch æ¨¡å‹ï¼šæ£€æŸ¥ .pth æˆ– .pt æ ¼å¼
// - å…¶ä»–æ ¼å¼ï¼šåŸºäºæ–‡ä»¶å¤´ç‰¹å¾æ£€æµ‹
//
// å‚æ•°ï¼š
//   - modelData: AIæ¨¡å‹äºŒè¿›åˆ¶æ•°æ®
//
// è¿”å›ï¼š
//   - string: æ£€æµ‹åˆ°çš„æ¨¡å‹æ ¼å¼ï¼ˆ"ONNX", "TensorFlow", "PyTorch" ç­‰ï¼‰
//   - error: æ£€æµ‹å¤±è´¥æˆ–æ ¼å¼ä¸æ”¯æŒæ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *AIModelDeployService) detectModelFormat(modelData []byte) (string, error) {
	// å§”æ‰˜ç»™æ–°çš„validateModelFormatæ–¹æ³•
	return s.validateModelFormat(modelData)
}

// mergeDeployOptions åˆå¹¶å¤šä¸ªAIæ¨¡å‹éƒ¨ç½²é€‰é¡¹
//
// ğŸ”§ **åˆå¹¶ç­–ç•¥**ï¼š
// - åé¢çš„é€‰é¡¹è¦†ç›–å‰é¢çš„é€‰é¡¹
// - å¯¹åµŒå¥—çš„ä¸šåŠ¡æ¨¡å¼é€‰é¡¹è¿›è¡Œæ·±åº¦åˆå¹¶
// - ç‰¹åˆ«å¤„ç†æ€§èƒ½é…ç½®å’Œæƒé™è®¾ç½®
//
// å‚æ•°ï¼š
//   - options: å¤šä¸ªéƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - *types.ResourceDeployOptions: åˆå¹¶åçš„é€‰é¡¹
//   - error: åˆå¹¶å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *AIModelDeployService) mergeDeployOptions(
	options []*types.ResourceDeployOptions,
) (*types.ResourceDeployOptions, error) {
	// å§”æ‰˜ç»™å¸¦åœ°å€çš„æ–°æ–¹æ³•
	merged, _, err := s.mergeDeployOptionsWithAddress(options)
	return merged, err
}

// buildAIModelResource æ„å»ºAIæ¨¡å‹èµ„æºå®šä¹‰
//
// ğŸ—ï¸ **èµ„æºæ„å»º**ï¼š
// - è®¾ç½® ResourceCategory.EXECUTABLE
// - è®¾ç½® ExecutableType.AIMODEL
// - é…ç½® AIModelExecutionConfig
// - è®¾ç½®æ¨¡å‹å…ƒæ•°æ®å’Œç‰ˆæœ¬ä¿¡æ¯
//
// å‚æ•°ï¼š
//   - deployerAddress: éƒ¨ç½²è€…åœ°å€
//   - modelData: æ¨¡å‹æ•°æ®
//   - modelFormat: æ¨¡å‹æ ¼å¼
//   - contentHash: å†…å®¹å“ˆå¸Œ
//   - options: éƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - *resourcepb.Resource: æ„å»ºçš„AIæ¨¡å‹èµ„æº
//   - error: æ„å»ºå¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *AIModelDeployService) buildAIModelResource(
	deployerAddress string,
	modelData []byte,
	modelFormat string,
	contentHash []byte,
	options *types.ResourceDeployOptions,
) (*resourcepb.Resource, error) {
	// åˆ›å»ºé»˜è®¤é…ç½®å¹¶å§”æ‰˜ç»™æ–°çš„å®Œæ•´å®ç°
	defaultConfig := &resourcepb.AIModelExecutionConfig{
		// TODO: æ·»åŠ é»˜è®¤é…ç½®
	}
	return s.buildAIModelResourceComplete(deployerAddress, modelData, modelFormat, defaultConfig, "AIæ¨¡å‹", "AIæ¨¡å‹æè¿°", contentHash, options)
}

// extractModelMetadata ä»AIæ¨¡å‹ä¸­æå–å…ƒæ•°æ®ä¿¡æ¯
//
// ğŸ” **æå–å†…å®¹**ï¼š
// - è¾“å…¥å¼ é‡è§„æ ¼ï¼ˆåç§°ã€å½¢çŠ¶ã€ç±»å‹ï¼‰
// - è¾“å‡ºå¼ é‡è§„æ ¼ï¼ˆåç§°ã€å½¢çŠ¶ã€ç±»å‹ï¼‰
// - æ¨¡å‹ç‰ˆæœ¬å’Œåˆ›å»ºä¿¡æ¯
// - æ¨ç†æ€§èƒ½é¢„ä¼°
//
// å‚æ•°ï¼š
//   - modelData: AIæ¨¡å‹æ•°æ®
//   - modelFormat: æ¨¡å‹æ ¼å¼
//
// è¿”å›ï¼š
//   - *resourcepb.AIModelExecutionConfig: æå–çš„æ‰§è¡Œé…ç½®
//   - error: æå–å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *AIModelDeployService) extractModelMetadata(
	modelData []byte,
	modelFormat string,
) (*resourcepb.AIModelExecutionConfig, error) {
	if s.logger != nil {
		s.logger.Debug("æå–AIæ¨¡å‹å…ƒæ•°æ®")
	}
	// ğŸš§ è–„å®ç°ï¼šå…ƒæ•°æ®æå–é€»è¾‘
	return nil, fmt.Errorf("AIæ¨¡å‹å…ƒæ•°æ®æå–åŠŸèƒ½å°šæœªå®ç°")
}

// buildAIModelOutput æ„å»ºAIæ¨¡å‹éƒ¨ç½²çš„è¾“å‡º UTXO
//
// ğŸ—ï¸ **è¾“å‡ºæ„å»º**ï¼š
// - åˆ›å»º ResourceOutput ç±»å‹
// - åŒ…å«å®Œæ•´çš„AIæ¨¡å‹ Resource å®šä¹‰
// - é…ç½®æ¨¡å‹çš„åˆå§‹é”å®šæ¡ä»¶
// - è®¾ç½®æ¨¡å‹è®¿é—®å’Œè®¡è´¹å‚æ•°
//
// å‚æ•°ï¼š
//   - deployerAddress: éƒ¨ç½²è€…åœ°å€
//   - aiModelResource: AIæ¨¡å‹èµ„æºå®šä¹‰
//   - options: éƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - *transaction.TxOutput: æ„å»ºçš„AIæ¨¡å‹è¾“å‡º
//   - error: æ„å»ºå¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *AIModelDeployService) buildAIModelOutput(
	deployerAddress string,
	aiModelResource *resourcepb.Resource,
	options *types.ResourceDeployOptions,
) (*transaction.TxOutput, error) {
	// å§”æ‰˜ç»™æ–°çš„å¤šè¾“å‡ºå®ç°ï¼Œè¿”å›ç¬¬ä¸€ä¸ªè¾“å‡º
	outputs, err := s.buildAIModelOutputs(deployerAddress, aiModelResource, "0", options)
	if err != nil {
		return nil, err
	}

	if len(outputs) > 0 {
		return outputs[0], nil
	}

	return nil, fmt.Errorf("AIæ¨¡å‹è¾“å‡ºæ„å»ºå¤±è´¥")
}

// maxAIModelSize è¿”å›AIæ¨¡å‹çš„æœ€å¤§æ”¯æŒå¤§å°
//
// ğŸ¯ **é™åˆ¶åŸå› **ï¼š
// - æ§åˆ¶æ¨¡å‹éƒ¨ç½²å’Œæ¨ç†çš„æ€§èƒ½å½±å“
// - é˜²æ­¢è¿‡å¤§æ¨¡å‹å½±å“ç½‘ç»œå’Œå­˜å‚¨
// - ä¿è¯åˆç†çš„éƒ¨ç½²å’ŒåŠ è½½æ—¶é—´
//
// è¿”å›ï¼š
//   - int: æœ€å¤§AIæ¨¡å‹å¤§å°ï¼ˆå­—èŠ‚ï¼‰
func maxAIModelSize() int {
	// ğŸ¯ åˆç†çš„æ¨¡å‹å¤§å°é™åˆ¶ï¼šæ”¯æŒå¤§å¤šæ•°å®ç”¨AIæ¨¡å‹
	return 500 * 1024 * 1024 // 500MBï¼Œè¶³å¤Ÿæ”¯æŒå¤§éƒ¨åˆ†æ·±åº¦å­¦ä¹ æ¨¡å‹
}

// min è¾…åŠ©å‡½æ•°ï¼šè¿”å›ä¸¤ä¸ªæ•´æ•°çš„æœ€å°å€¼
func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}

// ============================================================================
//
//	æ–°å¢è¾…åŠ©æ–¹æ³•å®ç°
//
// ============================================================================

// validateDeployParams éªŒè¯AIæ¨¡å‹éƒ¨ç½²å‚æ•°
func (s *AIModelDeployService) validateDeployParams(
	modelBytes []byte,
	config *resourcepb.AIModelExecutionConfig,
	name string,
	description string,
	options []*types.ResourceDeployOptions,
) error {
	if len(modelBytes) == 0 {
		return fmt.Errorf("AIæ¨¡å‹æ•°æ®ä¸èƒ½ä¸ºç©º")
	}
	if len(modelBytes) > maxAIModelSize() {
		return fmt.Errorf("AIæ¨¡å‹å¤§å°è¶…è¿‡é™åˆ¶ï¼Œæœ€å¤§æ”¯æŒ %d å­—èŠ‚", maxAIModelSize())
	}
	if config == nil {
		return fmt.Errorf("AIæ¨¡å‹æ‰§è¡Œé…ç½®ä¸èƒ½ä¸ºç©º")
	}
	if name == "" {
		return fmt.Errorf("AIæ¨¡å‹åç§°ä¸èƒ½ä¸ºç©º")
	}
	if len(name) > 128 {
		return fmt.Errorf("AIæ¨¡å‹åç§°è¿‡é•¿ï¼Œæœ€å¤§æ”¯æŒ 128 å­—ç¬¦")
	}
	if len(description) > 1024 {
		return fmt.Errorf("AIæ¨¡å‹æè¿°è¿‡é•¿ï¼Œæœ€å¤§æ”¯æŒ 1024 å­—ç¬¦")
	}

	if s.logger != nil {
		s.logger.Debug("âœ… AIæ¨¡å‹éƒ¨ç½²å‚æ•°éªŒè¯é€šè¿‡")
	}
	return nil
}

// mergeDeployOptionsWithAddress åˆå¹¶éƒ¨ç½²é€‰é¡¹å¹¶æå–éƒ¨ç½²è€…åœ°å€
func (s *AIModelDeployService) mergeDeployOptionsWithAddress(options []*types.ResourceDeployOptions) (*types.ResourceDeployOptions, string, error) {
	// é»˜è®¤éƒ¨ç½²è€…åœ°å€ï¼ˆä»é€‰é¡¹ä¸­æå–æˆ–ä»ä¸Šä¸‹æ–‡è·å–ï¼‰
	deployerAddress := "default_ai_deployer_address" // TODO: ä»ä¸Šä¸‹æ–‡æˆ–é€‰é¡¹ä¸­è·å–

	if len(options) == 0 {
		return nil, deployerAddress, nil
	}

	// åˆå¹¶å¤šä¸ªé€‰é¡¹ï¼ˆæš‚æ—¶è¿”å›æœ€åä¸€ä¸ªï¼‰
	merged := options[len(options)-1]

	if s.logger != nil {
		s.logger.Debug("âœ… AIæ¨¡å‹éƒ¨ç½²é€‰é¡¹å¤„ç†å®Œæˆ")
	}

	return merged, deployerAddress, nil
}

// validateModelFormat éªŒè¯å¹¶æ£€æµ‹AIæ¨¡å‹æ ¼å¼
func (s *AIModelDeployService) validateModelFormat(modelBytes []byte) (string, error) {
	if len(modelBytes) < 16 {
		return "", fmt.Errorf("æ¨¡å‹æ•°æ®é•¿åº¦ä¸è¶³ï¼Œæ— æ³•æ£€æµ‹æ ¼å¼")
	}

	// ğŸ” ONNX æ ¼å¼æ£€æµ‹ - Protocol Buffer æ ¼å¼
	if len(modelBytes) >= 4 {
		if modelBytes[0] == 0x08 && modelBytes[1] == 0x01 {
			if s.logger != nil {
				s.logger.Debug("âœ… æ£€æµ‹åˆ°ONNXæ¨¡å‹æ ¼å¼")
			}
			return "ONNX", nil
		}
	}

	// ğŸ” TensorFlow SavedModel æ£€æµ‹
	if len(modelBytes) >= 8 {
		// ç®€åŒ–çš„ TensorFlow æ£€æµ‹
		if s.logger != nil {
			s.logger.Debug("âœ… æ£€æµ‹åˆ°TensorFlowæ¨¡å‹æ ¼å¼")
		}
		return "TensorFlow", nil
	}

	// ğŸ” PyTorch æ¨¡å‹æ£€æµ‹ - Pickle æ ¼å¼
	if len(modelBytes) >= 2 {
		if modelBytes[0] == 0x80 && modelBytes[1] == 0x03 {
			if s.logger != nil {
				s.logger.Debug("âœ… æ£€æµ‹åˆ°PyTorchæ¨¡å‹æ ¼å¼")
			}
			return "PyTorch", nil
		}
	}

	// é»˜è®¤è¿”å›é€šç”¨æ ¼å¼ï¼ˆå…è®¸æœªçŸ¥æ ¼å¼ä½†è­¦å‘Šï¼‰
	if s.logger != nil {
		s.logger.Warn("âš ï¸ æœªèƒ½è¯†åˆ«AIæ¨¡å‹æ ¼å¼ï¼Œå°†ä½œä¸ºé€šç”¨æ ¼å¼å¤„ç†")
	}
	return "Generic", nil
}

// parseAddress è§£æåœ°å€å­—ç¬¦ä¸²ä¸ºå­—èŠ‚æ•°ç»„
func (s *AIModelDeployService) parseAddress(address string) ([]byte, error) {
	if address == "" {
		return nil, fmt.Errorf("åœ°å€ä¸èƒ½ä¸ºç©º")
	}

	// ç®€å•åœ°å€è§£æï¼ˆå®é™…åº”è¯¥ä½¿ç”¨åœ°å€ç¼–ç ç³»ç»Ÿï¼‰
	addrBytes, err := hex.DecodeString(address)
	if err != nil {
		// å¦‚æœä¸æ˜¯åå…­è¿›åˆ¶ï¼Œå°è¯•ä½¿ç”¨å­—ç¬¦ä¸²å­—èŠ‚
		addrBytes = []byte(address)
	}

	if len(addrBytes) > 64 { // é™åˆ¶åœ°å€æœ€å¤§é•¿åº¦
		return nil, fmt.Errorf("åœ°å€è¿‡é•¿ï¼Œæœ€å¤§æ”¯æŒ 64 å­—èŠ‚")
	}

	return addrBytes, nil
}

// buildAIModelResourceComplete æ„å»ºAIæ¨¡å‹èµ„æºå®šä¹‰ï¼ˆå®ç°ç‰ˆæœ¬ï¼‰
func (s *AIModelDeployService) buildAIModelResourceComplete(
	deployerAddress string,
	modelBytes []byte,
	modelFormat string,
	config *resourcepb.AIModelExecutionConfig,
	name string,
	description string,
	contentHash []byte,
	options *types.ResourceDeployOptions,
) (*resourcepb.Resource, error) {
	if s.logger != nil {
		s.logger.Debug("ğŸ—ï¸ æ„å»ºAIæ¨¡å‹èµ„æºå®šä¹‰")
	}

	// ç¡®å®šMIMEç±»å‹
	mimeType := s.getMimeType(modelFormat)

	// æ„å»ºåŸºç¡€èµ„æºä¿¡æ¯
	resource := &resourcepb.Resource{
		Category:         resourcepb.ResourceCategory_RESOURCE_CATEGORY_EXECUTABLE,
		ExecutableType:   resourcepb.ExecutableType_EXECUTABLE_TYPE_AIMODEL,
		ContentHash:      contentHash,
		MimeType:         mimeType,
		Size:             uint64(len(modelBytes)),
		CreatedTimestamp: uint64(time.Now().Unix()),
		CreatorAddress:   deployerAddress,
		Name:             name,
		Version:          "1.0.0",
		Description:      description,
	}

	// è®¾ç½®AIæ¨¡å‹æ‰§è¡Œé…ç½®
	resource.ExecutionConfig = &resourcepb.Resource_Aimodel{
		Aimodel: config,
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("âœ… AIæ¨¡å‹èµ„æºæ„å»ºå®Œæˆ - name: %s, æ ¼å¼: %s, å†…å®¹å“ˆå¸Œ: %x",
			name, modelFormat, contentHash))
	}

	return resource, nil
}

// getMimeType æ ¹æ®æ¨¡å‹æ ¼å¼è·å–MIMEç±»å‹
func (s *AIModelDeployService) getMimeType(modelFormat string) string {
	switch modelFormat {
	case "ONNX":
		return "application/onnx"
	case "TensorFlow":
		return "application/tensorflow"
	case "PyTorch":
		return "application/pytorch"
	default:
		return "application/octet-stream"
	}
}

// estimateDeploymentFee ä¼°ç®—AIæ¨¡å‹éƒ¨ç½²è´¹ç”¨
func (s *AIModelDeployService) estimateDeploymentFee(modelSizeBytes int) string {
	// åŸºç¡€éƒ¨ç½²è´¹ç”¨
	baseFee := 0.001 // 0.001 åŸç”Ÿä»£å¸

	// æ ¹æ®æ¨¡å‹å¤§å°è®¡ç®—é¢å¤–è´¹ç”¨ï¼ˆæ¯MB 0.0001ï¼‰
	sizeFeePerMB := 0.0001
	sizeInMB := float64(modelSizeBytes) / (1024 * 1024)
	sizeFee := sizeInMB * sizeFeePerMB

	// æ€»è´¹ç”¨
	totalFee := baseFee + sizeFee
	totalFeeStr := fmt.Sprintf("%.8f", totalFee)

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("ğŸ’° AIæ¨¡å‹éƒ¨ç½²è´¹ç”¨è®¡ç®—: åŸºç¡€è´¹ç”¨=%.8f, å¤§å°è´¹ç”¨=%.8f, æ€»è®¡=%.8f",
			baseFee, sizeFee, totalFee))
	}

	return totalFeeStr
}

// buildAIModelOutputs æ„å»ºAIæ¨¡å‹éƒ¨ç½²è¾“å‡ºï¼ˆå®ç°ç‰ˆæœ¬ï¼‰
func (s *AIModelDeployService) buildAIModelOutputs(
	deployerAddress string,
	aiModelResource *resourcepb.Resource,
	changeAmount string,
	options *types.ResourceDeployOptions,
) ([]*transaction.TxOutput, error) {
	if s.logger != nil {
		s.logger.Debug("ğŸ—ï¸ æ„å»ºAIæ¨¡å‹éƒ¨ç½²è¾“å‡º")
	}

	var outputs []*transaction.TxOutput
	deployerAddrBytes, err := s.parseAddress(deployerAddress)
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²è€…åœ°å€è§£æå¤±è´¥: %v", err)
	}

	// 1. æ„å»ºAIæ¨¡å‹éƒ¨ç½²è¾“å‡ºï¼ˆResourceOutputï¼‰
	modelOutput := &transaction.TxOutput{
		Owner: deployerAddrBytes,
		LockingConditions: []*transaction.LockingCondition{
			{
				Condition: &transaction.LockingCondition_SingleKeyLock{
					SingleKeyLock: &transaction.SingleKeyLock{
						KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
							RequiredAddressHash: deployerAddrBytes,
						},
						RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
						SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
					},
				},
			},
		},
		OutputContent: &transaction.TxOutput_Resource{
			Resource: &transaction.ResourceOutput{
				Resource:        aiModelResource,
				StorageStrategy: transaction.ResourceOutput_STORAGE_STRATEGY_CONTENT_ADDRESSED,
			},
		},
	}
	outputs = append(outputs, modelOutput)

	// 2. æ„å»ºæ‰¾é›¶è¾“å‡ºï¼ˆå¦‚æœ‰éœ€è¦ï¼‰
	if changeAmount != "" && changeAmount != "0" {
		changeFloat, err := strconv.ParseFloat(changeAmount, 64)
		if err == nil && changeFloat > 0.00001 { // æœ€å°æ‰¾é›¶é—¨é™
			changeOutput := &transaction.TxOutput{
				Owner: deployerAddrBytes,
				LockingConditions: []*transaction.LockingCondition{
					{
						Condition: &transaction.LockingCondition_SingleKeyLock{
							SingleKeyLock: &transaction.SingleKeyLock{
								KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
									RequiredAddressHash: deployerAddrBytes,
								},
								RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
								SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
							},
						},
					},
				},
				OutputContent: &transaction.TxOutput_Asset{
					Asset: &transaction.AssetOutput{
						AssetContent: &transaction.AssetOutput_NativeCoin{
							NativeCoin: &transaction.NativeCoinAsset{
								Amount: strconv.FormatUint(uint64(changeFloat*1e8), 10), // ğŸ”¥ ä¿®å¤ï¼šè½¬æ¢ä¸ºæ•´æ•°weiå­—ç¬¦ä¸²
							},
						},
					},
				},
			}
			outputs = append(outputs, changeOutput)

			if s.logger != nil {
				s.logger.Debug(fmt.Sprintf("ğŸ’° æ·»åŠ æ‰¾é›¶è¾“å‡º - é‡‘é¢: %s", changeAmount))
			}
		}
	}

	if s.logger != nil {
		s.logger.Info(fmt.Sprintf("âœ… AIæ¨¡å‹è¾“å‡ºæ„å»ºå®Œæˆ - æ€»è¾“å‡ºæ•°: %d", len(outputs)))
	}

	return outputs, nil
}

// buildCompleteTransaction æ„å»ºå®Œæ•´äº¤æ˜“
func (s *AIModelDeployService) buildCompleteTransaction(
	selectedInputs []*transaction.TxInput,
	outputs []*transaction.TxOutput,
) (*transaction.Transaction, error) {
	if s.logger != nil {
		s.logger.Debug("ğŸ—ï¸ æ„å»ºå®Œæ•´AIæ¨¡å‹éƒ¨ç½²äº¤æ˜“")
	}

	tx := &transaction.Transaction{
		Version:           1,
		Inputs:            selectedInputs,
		Outputs:           outputs,
		Nonce:             0,
		CreationTimestamp: uint64(time.Now().Unix()),
		ChainId:           []byte("weisyn-mainnet"),
	}

	return tx, nil
}

// cacheTransaction ç¼“å­˜äº¤æ˜“å¹¶è¿”å›å“ˆå¸Œ
func (s *AIModelDeployService) cacheTransaction(ctx context.Context, tx *transaction.Transaction) ([]byte, error) {
	if s.logger != nil {
		s.logger.Debug("ğŸ“‹ ç¼“å­˜AIæ¨¡å‹éƒ¨ç½²äº¤æ˜“")
	}

	// TODO: ä½¿ç”¨çœŸå®çš„å“ˆå¸Œè®¡ç®—
	// txHash := internal.ComputeTransactionHash(tx, s.hashManager)
	txHash := sha256.Sum256([]byte(fmt.Sprintf("ai_model_deploy_%d", time.Now().UnixNano())))

	// ç¼“å­˜åˆ°å†…å­˜
	if s.cacheStore != nil {
		cacheKey := hex.EncodeToString(txHash[:])
		internal.CacheUnsignedTransaction(ctx, s.cacheStore, []byte(cacheKey), tx, internal.GetDefaultCacheConfig(), s.logger)
	}

	return txHash[:], nil
}

// calculateAddressFromPrivateKey ä»ç§é’¥è®¡ç®—åœ°å€ï¼ˆæ— çŠ¶æ€è®¾è®¡çš„æ ¸å¿ƒæ–¹æ³•ï¼‰
//
// å®ç°å®Œæ•´çš„ç§é’¥åˆ°åœ°å€çš„æ¨å¯¼æµç¨‹ï¼š
// ç§é’¥ â†’ å…¬é’¥(secp256k1) â†’ åœ°å€(Base58Check)
//
// å‚æ•°ï¼š
//   - privateKey: 32å­—èŠ‚ç§é’¥
//
// è¿”å›ï¼š
//   - string: WESæ ‡å‡†åœ°å€
//   - error: è®¡ç®—å¤±è´¥æ—¶çš„é”™è¯¯
func (s *AIModelDeployService) calculateAddressFromPrivateKey(privateKey []byte) (string, error) {
	// 1. ä»ç§é’¥å¯¼å‡ºå…¬é’¥
	publicKey, err := s.keyManager.DerivePublicKey(privateKey)
	if err != nil {
		return "", fmt.Errorf("ä»ç§é’¥å¯¼å‡ºå…¬é’¥å¤±è´¥: %v", err)
	}

	// 2. ä»å…¬é’¥ç”Ÿæˆåœ°å€
	address, err := s.addressManager.PublicKeyToAddress(publicKey)
	if err != nil {
		return "", fmt.Errorf("ä»å…¬é’¥ç”Ÿæˆåœ°å€å¤±è´¥: %v", err)
	}

	return address, nil
}

// ============================================================================
//                              å†…éƒ¨UTXOé€‰æ‹©æ–¹æ³•
// ============================================================================

// selectUTXOsForModelDeploy ä¸ºAIæ¨¡å‹éƒ¨ç½²é€‰æ‹©UTXOï¼ˆå†…éƒ¨æ–¹æ³•ï¼‰
func (s *AIModelDeployService) selectUTXOsForModelDeploy(ctx context.Context, deployerAddr []byte, amountStr string, tokenID string) ([]*transaction.TxInput, string, error) {
	targetAmount, err := s.parseAmount(amountStr)
	if err != nil {
		return nil, "", fmt.Errorf("é‡‘é¢è§£æå¤±è´¥: %v", err)
	}

	assetCategory := utxo.UTXOCategory_UTXO_CATEGORY_ASSET
	allUTXOs, err := s.utxoManager.GetUTXOsByAddress(ctx, deployerAddr, &assetCategory, true)
	if err != nil {
		return nil, "", fmt.Errorf("è·å–UTXOå¤±è´¥: %v", err)
	}

	if len(allUTXOs) == 0 {
		return nil, "", fmt.Errorf("åœ°å€æ²¡æœ‰å¯ç”¨UTXO")
	}

	var selectedInputs []*transaction.TxInput
	var totalSelected uint64 = 0

	for _, utxoItem := range allUTXOs {
		utxoAmount := s.extractUTXOAmount(utxoItem)
		if utxoAmount == 0 {
			continue
		}

		txInput := &transaction.TxInput{
			PreviousOutput: &transaction.OutPoint{
				TxId:        utxoItem.Outpoint.TxId,
				OutputIndex: utxoItem.Outpoint.OutputIndex,
			},
			IsReferenceOnly: false,
			Sequence:        0xffffffff,
		}

		selectedInputs = append(selectedInputs, txInput)
		totalSelected += utxoAmount

		if totalSelected >= targetAmount {
			break
		}
	}

	if totalSelected < targetAmount {
		return nil, "", fmt.Errorf("ä½™é¢ä¸è¶³ï¼Œéœ€è¦: %d, å¯ç”¨: %d", targetAmount, totalSelected)
	}

	changeAmount := totalSelected - targetAmount
	changeStr := s.formatAmount(changeAmount)

	return selectedInputs, changeStr, nil
}

func (s *AIModelDeployService) parseAmount(amountStr string) (uint64, error) {
	amount, err := strconv.ParseUint(amountStr, 10, 64)
	if err != nil {
		return 0, fmt.Errorf("æ— æ•ˆçš„é‡‘é¢æ ¼å¼: %v", err)
	}
	return amount, nil
}

func (s *AIModelDeployService) extractUTXOAmount(utxoItem *utxo.UTXO) uint64 {
	if utxoItem == nil {
		return 0
	}

	switch strategy := utxoItem.ContentStrategy.(type) {
	case *utxo.UTXO_CachedOutput:
		if cachedOutput := strategy.CachedOutput; cachedOutput != nil {
			if assetOutput := cachedOutput.GetAsset(); assetOutput != nil {
				if nativeCoin := assetOutput.GetNativeCoin(); nativeCoin != nil {
					amount, err := utils.ParseAmountSafely(nativeCoin.Amount)
					if err != nil {
						return 0
					}
					return amount
				}
				if contractToken := assetOutput.GetContractToken(); contractToken != nil {
					amount, err := utils.ParseAmountSafely(contractToken.Amount)
					if err != nil {
						return 0
					}
					return amount
				}
			}
		}
	}

	return 0
}

func (s *AIModelDeployService) formatAmount(amount uint64) string {
	// ä½¿ç”¨ç»Ÿä¸€çš„protobuf Amountå­—æ®µæ ¼å¼åŒ–æ–¹æ³•
	return utils.FormatAmountForProtobuf(amount)
}

// ============================================================================
//
//	ç¼–è¯‘æ—¶æ¥å£æ£€æŸ¥
//
// ============================================================================
// ç¡®ä¿ AIModelDeployService å®ç°äº†æ‰€éœ€çš„æ¥å£éƒ¨åˆ†
var _ interface {
	DeployAIModel(context.Context, []byte, string, *resourcepb.AIModelExecutionConfig, string, string, ...*types.ResourceDeployOptions) ([]byte, error)
} = (*AIModelDeployService)(nil)
