// Package contract æ™ºèƒ½åˆçº¦éƒ¨ç½²å®ç°
//
// ğŸ¯ **æ¨¡å—å®šä½**ï¼šContractService æ¥å£çš„æ™ºèƒ½åˆçº¦éƒ¨ç½²åŠŸèƒ½å®ç°
//
// æœ¬æ–‡ä»¶å®ç°æ™ºèƒ½åˆçº¦éƒ¨ç½²çš„æ ¸å¿ƒä¸šåŠ¡é€»è¾‘ï¼ŒåŒ…æ‹¬ï¼š
// - WASMæ™ºèƒ½åˆçº¦éƒ¨ç½²ï¼ˆDeployContractï¼‰
// - åˆçº¦å­—èŠ‚ç éªŒè¯å’Œä¼˜åŒ–
// - åˆçº¦ ABI è§£æå’ŒéªŒè¯
// - åˆçº¦æ‰§è¡Œç¯å¢ƒé…ç½®
// - åˆçº¦æƒé™å’Œè®¿é—®æ§åˆ¶è®¾ç½®
//
// ğŸ—ï¸ **æ¶æ„å®šä½**ï¼š
// - ä¸šåŠ¡å±‚ï¼šå®ç°æ™ºèƒ½åˆçº¦çš„éƒ¨ç½²ä¸šåŠ¡é€»è¾‘
// - æ‰§è¡Œå±‚ï¼šä¸åˆçº¦æ‰§è¡Œå¼•æ“çš„é›†æˆ
// - å­˜å‚¨å±‚ï¼šåˆçº¦å­—èŠ‚ç çš„å†…å®¹å¯»å€å­˜å‚¨
// - æƒé™å±‚ï¼šåˆçº¦çš„åˆå§‹è®¿é—®æ§åˆ¶å’Œæ²»ç†è®¾ç½®
//
// ğŸ”§ **è®¾è®¡åŸåˆ™**ï¼š
// - å®‰å…¨ä¼˜å…ˆï¼šä¸¥æ ¼çš„åˆçº¦å­—èŠ‚ç éªŒè¯å’Œæ²™ç®±éš”ç¦»
// - æ€§èƒ½å¯æ§ï¼šæ”¯æŒ æ‰§è¡Œè´¹ç”¨ é™åˆ¶å’Œæ‰§è¡Œæ—¶é—´æ§åˆ¶
// - æƒé™å¯é…ï¼šæ”¯æŒå…¬å¼€ã€ç§æœ‰ã€ä¼ä¸šçº§ç­‰å¤šç§éƒ¨ç½²æ¨¡å¼
// - æ ‡å‡†å…¼å®¹ï¼šéµå¾ª WASM å’Œæ™ºèƒ½åˆçº¦è¡Œä¸šæ ‡å‡†
//
// ğŸ“‹ **æ”¯æŒçš„åˆçº¦ç±»å‹**ï¼š
// - WASM åˆçº¦ï¼šWebAssembly å­—èŠ‚ç ï¼Œè·¨å¹³å°æ‰§è¡Œ
// - æ ‡å‡†åˆçº¦ï¼šç¬¦åˆ ContractExecutionConfig è§„èŒƒ
// - ä¼ä¸šåˆçº¦ï¼šæ”¯æŒå¤æ‚æ²»ç†å’Œæƒé™æ§åˆ¶
// - ç³»ç»Ÿåˆçº¦ï¼šå¹³å°çº§æœåŠ¡åˆçº¦
//
// ğŸ¯ **ä¸é™æ€èµ„æºçš„åŒºåˆ«**ï¼š
// - æ™ºèƒ½åˆçº¦ï¼šResourceCategory.EXECUTABLE + ExecutableType.CONTRACT
// - é™æ€èµ„æºï¼šResourceCategory.STATICï¼Œæ— æ‰§è¡Œèƒ½åŠ›
// - åˆçº¦å…·å¤‡è®¡ç®—é€»è¾‘å’ŒçŠ¶æ€ç®¡ç†èƒ½åŠ›
//
// ğŸ¯ **å®ç°çŠ¶æ€**ï¼š
// å®Œæ•´çš„æ™ºèƒ½åˆçº¦éƒ¨ç½²æœåŠ¡å®ç°ï¼Œç»è¿‡æ¨¡å—åŒ–é‡æ„
// é›†æˆäº†çœŸå®çš„ä¸šåŠ¡é€»è¾‘å’Œé¡¹ç›®èµ„æºå­˜å‚¨ç³»ç»Ÿ
package contract

import (
	"context"
	"fmt"
	"os"
	"strconv"
	"time"

	// å…¬å…±æ¥å£
	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
	"github.com/weisyn/v1/pkg/interfaces/repository"
	"github.com/weisyn/v1/pkg/types"

	// åè®®å®šä¹‰
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	resourcepb "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pb/blockchain/utxo"

	// åŸºç¡€è®¾æ–½
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"

	// å†…éƒ¨å·¥å…·
	"github.com/weisyn/v1/internal/core/blockchain/transaction/internal"
)

// ============================================================================
//
//	æ™ºèƒ½åˆçº¦éƒ¨ç½²å®ç°æœåŠ¡
//
// ============================================================================
// ContractDeployService æ™ºèƒ½åˆçº¦éƒ¨ç½²æ ¸å¿ƒå®ç°æœåŠ¡
//
// ğŸ¯ **æœåŠ¡èŒè´£**ï¼š
// - å®ç° ContractService.DeployContract æ–¹æ³•
// - å¤„ç† WASM æ™ºèƒ½åˆçº¦çš„éƒ¨ç½²å’ŒéªŒè¯
// - ç®¡ç†åˆçº¦çš„å†…å®¹å¯»å€å­˜å‚¨å’Œæ‰§è¡Œé…ç½®
// - è®¾ç½®åˆçº¦çš„åˆå§‹è®¿é—®æƒé™å’Œæ²»ç†è§„åˆ™
//
// ğŸ”§ **ä¾èµ–æ³¨å…¥**ï¼š
// - contractValidatorï¼šåˆçº¦å­—èŠ‚ç éªŒè¯æœåŠ¡
// - contentAddressStoreï¼šå†…å®¹å¯»å€å­˜å‚¨æœåŠ¡
// - utxoSelectorï¼šUTXO é€‰æ‹©å’Œç®¡ç†æœåŠ¡
// - feeCalculatorï¼šè´¹ç”¨è®¡ç®—æœåŠ¡
// - cacheStoreï¼šäº¤æ˜“ç¼“å­˜å­˜å‚¨
// - loggerï¼šæ—¥å¿—è®°å½•æœåŠ¡
//
// ğŸ“ **ä½¿ç”¨ç¤ºä¾‹**ï¼š
//
//	service := NewContractDeployService(validator, contentStore, utxoSelector, feeCalc, cache, logger)
//	txHash, err := service.DeployContract(ctx, deployer, wasmCode, options...)
type ContractDeployService struct {
	// æ ¸å¿ƒä¾èµ–æœåŠ¡ï¼ˆä½¿ç”¨å…¬å…±æ¥å£ï¼‰
	utxoManager       repository.UTXOManager                   // UTXO ç®¡ç†æœåŠ¡
	keyManager        crypto.KeyManager                        // å¯†é’¥ç®¡ç†æœåŠ¡ï¼ˆç”¨äºä»ç§é’¥ç”Ÿæˆå…¬é’¥ï¼‰
	addressManager    crypto.AddressManager                    // åœ°å€ç®¡ç†æœåŠ¡ï¼ˆç”¨äºä»å…¬é’¥ç”Ÿæˆåœ°å€ï¼‰
	cacheStore        storage.MemoryStore                      // å†…å­˜ç¼“å­˜å­˜å‚¨
	logger            log.Logger                               // æ—¥å¿—è®°å½•å™¨
	hashServiceClient transaction.TransactionHashServiceClient // äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
	configManager     config.Provider                          // é…ç½®ç®¡ç†å™¨

	// ï¼ˆéƒ¨ç½²æœåŠ¡ä¸ç›´æ¥æ‰§è¡Œåˆçº¦ï¼Œä¸éœ€è¦executionä¾èµ–ï¼‰

	// ğŸ¯ çœŸå®å®ç°æ‰€éœ€çš„ä¾èµ–
	resourceManager    repository.ResourceManager // èµ„æºå­˜å‚¨ç®¡ç†å™¨
	deployValidator    *DeployValidator           // éƒ¨ç½²å‚æ•°éªŒè¯å™¨
	transactionBuilder *DeployTransactionBuilder  // äº¤æ˜“æ„å»ºå™¨
	storageManager     *DeployStorageManager      // å­˜å‚¨ç®¡ç†å™¨
}

// NewContractDeployService åˆ›å»ºæ™ºèƒ½åˆçº¦éƒ¨ç½²æœåŠ¡å®ä¾‹
//
// ğŸ—ï¸ **æ„é€ å™¨æ¨¡å¼**ï¼š
// ä½¿ç”¨ä¾èµ–æ³¨å…¥åˆ›å»ºæœåŠ¡å®ä¾‹ï¼Œç¡®ä¿æ‰€æœ‰ä¾èµ–éƒ½å·²æ­£ç¡®åˆå§‹åŒ–
//
// å‚æ•°ï¼š
//   - contractValidator: åˆçº¦å­—èŠ‚ç éªŒè¯æœåŠ¡
//   - contentAddressStore: å†…å®¹å¯»å€å­˜å‚¨æœåŠ¡
//   - utxoSelector: UTXO é€‰æ‹©å’Œç®¡ç†æœåŠ¡
//   - feeCalculator: è´¹ç”¨è®¡ç®—æœåŠ¡
//   - cacheStore: äº¤æ˜“ç¼“å­˜å­˜å‚¨æœåŠ¡
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - *ContractDeployService: åˆçº¦éƒ¨ç½²æœåŠ¡å®ä¾‹
//
// ğŸš¨ **æ³¨æ„äº‹é¡¹**ï¼š
// æ‰€æœ‰ä¾èµ–å‚æ•°éƒ½ä¸èƒ½ä¸º nilï¼Œå¦åˆ™ panic
func NewContractDeployService(
	utxoManager repository.UTXOManager,
	keyManager crypto.KeyManager,
	addressManager crypto.AddressManager,
	cacheStore storage.MemoryStore,
	logger log.Logger,
	resourceManager repository.ResourceManager, // ğŸ¯ èµ„æºå­˜å‚¨ç®¡ç†å™¨
	hashServiceClient transaction.TransactionHashServiceClient, // ğŸ¯ äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
	configManager config.Provider, // ğŸ¯ é…ç½®ç®¡ç†å™¨
) *ContractDeployService {
	// ä¸¥æ ¼æ£€æŸ¥æ‰€æœ‰ä¾èµ–
	if utxoManager == nil {
		panic("ContractDeployService: utxoManagerä¸èƒ½ä¸ºnil")
	}
	if keyManager == nil {
		panic("ContractDeployService: keyManagerä¸èƒ½ä¸ºnil")
	}
	if addressManager == nil {
		panic("ContractDeployService: addressManagerä¸èƒ½ä¸ºnil")
	}
	if cacheStore == nil {
		panic("ContractDeployService: cacheStoreä¸èƒ½ä¸ºnil")
	}
	if logger == nil {
		panic("ContractDeployService: loggerä¸èƒ½ä¸ºnil")
	}
	if resourceManager == nil {
		panic("ContractDeployService: resourceManagerä¸èƒ½ä¸ºnil")
	}
	if hashServiceClient == nil {
		panic("ContractDeployService: hashServiceClientä¸èƒ½ä¸ºnil")
	}
	if configManager == nil {
		panic("ContractDeployService: configManagerä¸èƒ½ä¸ºnil")
	}
	return &ContractDeployService{
		utxoManager:       utxoManager,
		keyManager:        keyManager,
		addressManager:    addressManager,
		cacheStore:        cacheStore,
		logger:            logger,
		resourceManager:   resourceManager,
		hashServiceClient: hashServiceClient,
		configManager:     configManager,

		// ğŸ¯ åˆ›å»ºçœŸå®å®ç°ç»„ä»¶
		deployValidator:    NewDeployValidator(logger, configManager, addressManager),
		transactionBuilder: NewDeployTransactionBuilder(utxoManager, cacheStore, NewDeployValidator(logger, configManager, addressManager), hashServiceClient, configManager, logger),
		storageManager:     NewDeployStorageManager(resourceManager, logger),
	}
}

// ============================================================================
//
//	æ ¸å¿ƒåˆçº¦éƒ¨ç½²æ–¹æ³•å®ç°
//
// ============================================================================
// DeployContract å®ç°æ™ºèƒ½åˆçº¦éƒ¨ç½²åŠŸèƒ½
//
// ğŸ¯ **æ–¹æ³•èŒè´£**ï¼š
// å®ç° blockchain.ContractService.DeployContract æ¥å£
// æ”¯æŒ WASM æ™ºèƒ½åˆçº¦çš„å®‰å…¨éƒ¨ç½²å’Œé…ç½®
//
// ğŸ“‹ **ä¸šåŠ¡æµç¨‹**ï¼š
// 1. éªŒè¯åˆçº¦å­—èŠ‚ç çš„æ ¼å¼å’Œå®‰å…¨æ€§
// 2. è§£æå’ŒéªŒè¯åˆçº¦ ABI é…ç½®
// 3. è®¡ç®—åˆçº¦çš„å†…å®¹å“ˆå¸Œ
// 4. å°†åˆçº¦å­—èŠ‚ç å­˜å‚¨åˆ°å†…å®¹å¯»å€ç½‘ç»œ
// 5. æ„å»º ResourceOutputï¼ˆExecutableType.CONTRACTï¼‰
// 6. é…ç½®åˆçº¦çš„æ‰§è¡Œç¯å¢ƒå‚æ•°
// 7. è®¾ç½®åˆçº¦çš„åˆå§‹è®¿é—®æƒé™
// 8. é€‰æ‹©éƒ¨ç½²è´¹ç”¨çš„æ”¯ä»˜ UTXO
// 9. å°†éƒ¨ç½²äº¤æ˜“å­˜å‚¨åˆ°å†…å­˜ç¼“å­˜
// 10. è¿”å›äº¤æ˜“å“ˆå¸Œä¾›ç”¨æˆ·ç­¾å
//
// ğŸ“ **å‚æ•°è¯´æ˜**ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡ï¼Œç”¨äºè¶…æ—¶æ§åˆ¶å’Œå–æ¶ˆæ“ä½œ
//   - deployerAddress: åˆçº¦éƒ¨ç½²è€…åœ°å€
//   - wasmCode: WASM æ™ºèƒ½åˆçº¦å­—èŠ‚ç 
//   - options: å¯é€‰çš„éƒ¨ç½²é€‰é¡¹ï¼ˆæƒé™æ§åˆ¶ã€æ‰§è¡Œè´¹ç”¨ é™åˆ¶ã€æ²»ç†è®¾ç½®ç­‰ï¼‰
//
// ğŸ“¤ **è¿”å›å€¼**ï¼š
//   - []byte: äº¤æ˜“å“ˆå¸Œï¼Œç”¨äºåç»­ç­¾åå’Œæäº¤
//   - error: é”™è¯¯ä¿¡æ¯ï¼Œéƒ¨ç½²å¤±è´¥æ—¶è¿”å›å…·ä½“åŸå› 
//
// ğŸ¯ **æ”¯æŒåœºæ™¯**ï¼š
// - åŸºç¡€åˆçº¦éƒ¨ç½²ï¼šDeployContract(ctx, deployer, wasmCode)
// - ä¼ä¸šçº§åˆçº¦ï¼šDeployContract(ctx, deployer, wasmCode, &types.ResourceDeployOptions{EnterpriseOptions: {...}})
// - æ²»ç†åˆçº¦ï¼šDeployContract(ctx, deployer, wasmCode, &types.ResourceDeployOptions{PermissionModel: {...}})
// - æ‰§è¡Œè´¹ç”¨ æ§åˆ¶ï¼šDeployContract(ctx, deployer, wasmCode, &types.ResourceDeployOptions{FeeControl: {...}})
//
// ğŸ’¡ **å®‰å…¨ç‰¹æ€§**ï¼š
// - å­—èŠ‚ç éªŒè¯ï¼šç¡®ä¿ WASM ä»£ç å®‰å…¨æ€§
// - æ²™ç®±æ‰§è¡Œï¼šéš”ç¦»åˆçº¦æ‰§è¡Œç¯å¢ƒ
// - èµ„æºé™åˆ¶ï¼šæ‰§è¡Œè´¹ç”¨ é™åˆ¶å’Œæ‰§è¡Œæ—¶é—´æ§åˆ¶
// - æƒé™ç®¡ç†ï¼šç»†ç²’åº¦çš„è®¿é—®æ§åˆ¶
//
// âœ… **å®ç°çŠ¶æ€**ï¼šå®Œæ•´å®ç°ï¼Œé›†æˆé¡¹ç›®èµ„æºå­˜å‚¨ç³»ç»Ÿ
func (s *ContractDeployService) DeployContract(
	ctx context.Context,
	deployerPrivateKey []byte,
	contractFilePath string,
	config *resourcepb.ContractExecutionConfig,
	name string,
	description string,
	options ...*types.ResourceDeployOptions,
) ([]byte, error) {
	// ä»ç§é’¥è®¡ç®—éƒ¨ç½²è€…åœ°å€ï¼ˆæ— çŠ¶æ€è®¾è®¡ï¼‰
	deployerAddress, err := s.calculateAddressFromPrivateKey(deployerPrivateKey)
	if err != nil {
		return nil, fmt.Errorf("ä»ç§é’¥è®¡ç®—åœ°å€å¤±è´¥: %v", err)
	}

	// ä»æ–‡ä»¶è·¯å¾„è¯»å–åˆçº¦å­—èŠ‚ç 
	wasmCode, err := os.ReadFile(contractFilePath)
	if err != nil {
		return nil, fmt.Errorf("è¯»å–åˆçº¦æ–‡ä»¶å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("ğŸš€ å¼€å§‹å¤„ç†æ™ºèƒ½åˆçº¦éƒ¨ç½²è¯·æ±‚ - deployer: %s, åˆçº¦æ–‡ä»¶: %s",
			deployerAddress, contractFilePath))
	}

	// ğŸ”„ æ­¥éª¤1: åŸºç¡€å‚æ•°éªŒè¯
	if err := s.deployValidator.ValidateDeployParams(deployerAddress, wasmCode, options); err != nil {
		return nil, fmt.Errorf("å‚æ•°éªŒè¯å¤±è´¥: %v", err)
	}

	// ğŸ”§ æ­¥éª¤2: åˆå¹¶éƒ¨ç½²é€‰é¡¹
	mergedOptions, err := s.mergeDeployOptions(options)
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²é€‰é¡¹éªŒè¯å¤±è´¥: %v", err)
	}

	// ğŸ” æ­¥éª¤3: åŸºç¡€WASMæ ¼å¼éªŒè¯ï¼ˆç®€åŒ–ï¼‰
	if len(wasmCode) < 8 || string(wasmCode[0:4]) != "\x00asm" {
		return nil, fmt.Errorf("æ— æ•ˆçš„WASMå­—èŠ‚ç æ ¼å¼")
	}

	// ğŸ—ï¸ æ­¥éª¤4: é¢„å­˜å‚¨åˆçº¦å†…å®¹åˆ°é¡¹ç›®èµ„æºå­˜å‚¨ç³»ç»Ÿå¹¶è·å–å†…å®¹å“ˆå¸Œ
	// è§£å†³å¼‚æ„éƒ¨ç½²é—®é¢˜ï¼šç¡®ä¿å…¶ä»–èŠ‚ç‚¹å¯ä»¥é€šè¿‡content_hashè·å–åˆçº¦å†…å®¹
	contentHashBytes, storageLocations, err := s.storageManager.PreStoreContractContent(ctx, wasmCode, contractFilePath)
	if err != nil {
		if s.logger != nil {
			s.logger.Warn(fmt.Sprintf("âš ï¸ åˆçº¦å†…å®¹é¢„å­˜å‚¨å¤±è´¥ï¼Œä½†ç»§ç»­æ„å»ºäº¤æ˜“: %v", err))
		}
		// é¢„å­˜å‚¨å¤±è´¥ä¸å½±å“äº¤æ˜“æ„å»ºï¼Œä½†ä¼šè®°å½•è­¦å‘Š
		storageLocations = [][]byte{} // ç©ºçš„å­˜å‚¨ä½ç½®åˆ—è¡¨
	} else {
		if s.logger != nil {
			s.logger.Info(fmt.Sprintf("âœ… åˆçº¦å†…å®¹é¢„å­˜å‚¨æˆåŠŸ - ä½ç½®æ•°: %d, å†…å®¹å“ˆå¸Œ: %x",
				len(storageLocations), contentHashBytes))
		}
	}

	// ğŸ”§ æ­¥éª¤5: ä½¿ç”¨æä¾›çš„é…ç½®æˆ–é»˜è®¤é…ç½®ï¼ˆç®€åŒ–ï¼‰
	contractConfig := config
	if contractConfig == nil {
		// ä½¿ç”¨åˆç†çš„é»˜è®¤é…ç½®
		contractConfig = &resourcepb.ContractExecutionConfig{
			AbiVersion: "1.0",
			ExportedFunctions: []string{
				"init", "invoke", "query", // æ ‡å‡†åˆçº¦å‡½æ•°
			},
			ExecutionParams: map[string]string{
				"max_memory":     "16777216", // 16MB
				"max_stack_size": "65536",    // 64KB
				"gas_limit":      "1000000",  // 1M æ‰§è¡Œè´¹ç”¨
				"timeout":        "30",       // 30ç§’
			},
		}
	}

	// ğŸ“ æ­¥éª¤6: è§£æéƒ¨ç½²è€…åœ°å€
	deployerAddrBytes, err := s.deployValidator.ParseAddress(deployerAddress)
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²è€…åœ°å€è§£æå¤±è´¥: %v", err)
	}

	// ğŸ—ï¸ æ­¥éª¤7: æ„å»ºåˆçº¦èµ„æºå®šä¹‰
	contractResource, err := s.transactionBuilder.BuildContractResource(deployerAddress, wasmCode, contentHashBytes, contractConfig, name, description, mergedOptions)
	if err != nil {
		return nil, fmt.Errorf("åˆçº¦èµ„æºæ„å»ºå¤±è´¥: %v", err)
	}

	// ğŸ’° æ­¥éª¤8: é€‰æ‹©éƒ¨ç½²è´¹ç”¨çš„UTXOï¼ˆä½¿ç”¨åŸç”Ÿä»£å¸ï¼‰
	deploymentFee := s.transactionBuilder.EstimateDeploymentFee(len(wasmCode))
	selectedInputs, changeAmount, err := s.transactionBuilder.SelectUTXOsForDeploy(
		ctx, deployerAddrBytes, deploymentFee, "") // åŸç”Ÿä»£å¸
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²è´¹ç”¨UTXOé€‰æ‹©å¤±è´¥: %v", err)
	}

	// ğŸ—ï¸ æ­¥éª¤9: æ„å»ºåˆçº¦éƒ¨ç½²è¾“å‡º
	outputs, err := s.transactionBuilder.BuildContractOutputs(deployerAddress, contractResource, changeAmount, storageLocations, mergedOptions)
	if err != nil {
		return nil, fmt.Errorf("åˆçº¦è¾“å‡ºæ„å»ºå¤±è´¥: %v", err)
	}

	// ğŸ”„ æ­¥éª¤10: æ„å»ºå®Œæ•´äº¤æ˜“
	tx, err := s.transactionBuilder.BuildCompleteTransaction(selectedInputs, outputs, s.getChainIdBytes())
	if err != nil {
		return nil, fmt.Errorf("æ„å»ºå®Œæ•´äº¤æ˜“å¤±è´¥: %v", err)
	}

	// ğŸ”„ æ­¥éª¤11: è®¡ç®—äº¤æ˜“å“ˆå¸Œå¹¶ç¼“å­˜
	txHash, err := s.transactionBuilder.CacheTransaction(ctx, tx)
	if err != nil {
		return nil, fmt.Errorf("ç¼“å­˜äº¤æ˜“å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Info(fmt.Sprintf("âœ… æ™ºèƒ½åˆçº¦éƒ¨ç½²äº¤æ˜“æ„å»ºå®Œæˆ - txHash: %x, åˆçº¦å“ˆå¸Œ: %x, è´¹ç”¨: %s",
			txHash, contentHashBytes, deploymentFee))
	}

	return txHash, nil
}

// ============================================================================
//
//	ç§æœ‰è¾…åŠ©æ–¹æ³•
//
// ============================================================================

// mergeDeployOptions åˆå¹¶å¤šä¸ªåˆçº¦éƒ¨ç½²é€‰é¡¹
//
// ğŸ”§ **åˆå¹¶ç­–ç•¥**ï¼š
// - åé¢çš„é€‰é¡¹è¦†ç›–å‰é¢çš„é€‰é¡¹
// - å¯¹åµŒå¥—çš„ä¼ä¸šé€‰é¡¹è¿›è¡Œæ·±åº¦åˆå¹¶
// - ç‰¹åˆ«å¤„ç† æ‰§è¡Œè´¹ç”¨ é™åˆ¶å’Œæƒé™è®¾ç½®
//
// å‚æ•°ï¼š
//   - options: å¤šä¸ªéƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - *types.ResourceDeployOptions: åˆå¹¶åçš„é€‰é¡¹
//   - error: åˆå¹¶å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *ContractDeployService) mergeDeployOptions(
	options []*types.ResourceDeployOptions,
) (*types.ResourceDeployOptions, error) {
	if len(options) == 0 {
		return nil, nil
	}
	if s.logger != nil {
		s.logger.Debug("åˆå¹¶åˆçº¦éƒ¨ç½²é€‰é¡¹")
	}
	// âœ… å½“å‰å®ç°ï¼šä½¿ç”¨æœ€åä¸€ä¸ªé€‰é¡¹ä½œä¸ºæœ€ç»ˆé…ç½®
	// ç®€å•ç­–ç•¥ï¼šåç»­é€‰é¡¹è¦†ç›–å‰é¢çš„é€‰é¡¹ï¼Œé€‚ç”¨äºå¤§å¤šæ•°éƒ¨ç½²åœºæ™¯
	// æ”¯æŒæ‰©å±•ï¼šå¯ä»¥æ ¹æ®ä¸šåŠ¡éœ€æ±‚å®ç°æ›´å¤æ‚çš„åˆå¹¶é€»è¾‘
	return options[len(options)-1], nil
}

// buildContractResource æ„å»ºåˆçº¦èµ„æºå®šä¹‰
//
// ğŸ—ï¸ **èµ„æºæ„å»º**ï¼š
// - è®¾ç½® ResourceCategory.EXECUTABLE
// - è®¾ç½® ExecutableType.CONTRACT
// - é…ç½® ContractExecutionConfig
// - è®¾ç½®èµ„æºå…ƒæ•°æ®
//
// å‚æ•°ï¼š
//   - deployerAddress: éƒ¨ç½²è€…åœ°å€
//   - wasmCode: åˆçº¦å­—èŠ‚ç 
//   - contentHash: å†…å®¹å“ˆå¸Œ
//   - contractConfig: åˆçº¦æ‰§è¡Œé…ç½®
//   - options: éƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - *resourcepb.Resource: æ„å»ºçš„åˆçº¦èµ„æº
//   - error: æ„å»ºå¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯

// extractContractABI å¤„ç†åˆçº¦ ABI é…ç½®ä¿¡æ¯ï¼ˆçœŸå®å®ç°ï¼‰
//
// ğŸ¯ **çœŸå®å®ç°ç­–ç•¥**ï¼š
// 1. ä¼˜å…ˆä½¿ç”¨ç”¨æˆ·æä¾›çš„å®Œæ•´ABIé…ç½®
// 2. ä½¿ç”¨WASMå­—èŠ‚ç åˆ†ææå–çœŸå®å¯¼å‡ºå‡½æ•°
// 3. åŸºäºæ¨¡å—åˆ†æç»“æœæ¨å¯¼æ‰§è¡Œå‚æ•°
// 4. æœ€åä½¿ç”¨æ™ºèƒ½é»˜è®¤å€¼ä½œä¸ºfallback
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - contractFilePath: åˆçº¦æ–‡ä»¶è·¯å¾„ï¼ˆç”¨äºå­˜å‚¨ï¼‰
//   - wasmCode: WASM å­—èŠ‚ç 
//   - providedConfig: ç”¨æˆ·æä¾›çš„é…ç½®ï¼ˆå¯ä¸ºnilï¼‰
//
// è¿”å›ï¼š
//   - *resourcepb.ContractExecutionConfig: å®Œæ•´çš„çœŸå®æ‰§è¡Œé…ç½®
// âœ… **å·²åˆ é™¤åŸextractContractABIæ–¹æ³•ï¼Œä½¿ç”¨æ–°çš„extractContractABIWithExecutionEngineæ›¿ä»£**

// buildContractOutputs æ„å»ºåˆçº¦éƒ¨ç½²çš„è¾“å‡ºåˆ—è¡¨
//
// ğŸ—ï¸ **è¾“å‡ºæ„å»º**ï¼š
// - åˆ›å»º ResourceOutput ç±»å‹è¾“å‡ºï¼ˆåˆçº¦éƒ¨ç½²ï¼‰
// - åˆ›å»ºæ‰¾é›¶è¾“å‡ºï¼ˆå¦‚æœ‰éœ€è¦ï¼‰
//
// å‚æ•°ï¼š
//   - deployerAddress: éƒ¨ç½²è€…åœ°å€
//   - contractResource: åˆçº¦èµ„æºå®šä¹‰
//   - changeAmount: æ‰¾é›¶é‡‘é¢
//   - storageLocations: é¢„å­˜å‚¨ä½ç½®åˆ—è¡¨
//   - options: éƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - []*transaction.TxOutput: æ„å»ºçš„è¾“å‡ºåˆ—è¡¨
//   - error: æ„å»ºå¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (s *ContractDeployService) buildContractOutputs(
	deployerAddress string,
	contractResource *resourcepb.Resource,
	changeAmount string,
	storageLocations [][]byte,
	options *types.ResourceDeployOptions,
) ([]*transaction.TxOutput, error) {
	if s.logger != nil {
		s.logger.Debug("ğŸ—ï¸ æ„å»ºåˆçº¦éƒ¨ç½²è¾“å‡º")
	}

	var outputs []*transaction.TxOutput
	deployerAddrBytes, err := s.deployValidator.ParseAddress(deployerAddress)
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²è€…åœ°å€è§£æå¤±è´¥: %v", err)
	}

	// 1. æ„å»ºåˆçº¦éƒ¨ç½²è¾“å‡ºï¼ˆResourceOutputï¼‰
	contractOutput := &transaction.TxOutput{
		Owner: deployerAddrBytes,
		LockingConditions: []*transaction.LockingCondition{
			{
				Condition: &transaction.LockingCondition_SingleKeyLock{
					SingleKeyLock: &transaction.SingleKeyLock{
						KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
							RequiredAddressHash: deployerAddrBytes,
						},
						RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
						SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
					},
				},
			},
		},
		OutputContent: &transaction.TxOutput_Resource{
			Resource: &transaction.ResourceOutput{
				Resource:          contractResource,
				CreationTimestamp: uint64(time.Now().Unix()),
				CreationContext:   "Smart contract deployment via WASM file upload",
				StorageStrategy:   transaction.ResourceOutput_STORAGE_STRATEGY_CONTENT_ADDRESSED,
				StorageLocations:  storageLocations, // é¢„å­˜å‚¨ä½ç½®ä¿¡æ¯
				IsImmutable:       true,             // æ™ºèƒ½åˆçº¦é»˜è®¤ä¸å¯å˜
			},
		},
	}
	outputs = append(outputs, contractOutput)

	// 2. æ„å»ºæ‰¾é›¶è¾“å‡ºï¼ˆå¦‚æœ‰éœ€è¦ï¼‰
	if changeAmount != "" && changeAmount != "0" {
		changeFloat := 0.0
		_, err := fmt.Sscanf(changeAmount, "%f", &changeFloat)
		if err == nil && changeFloat > 0.00001 { // æœ€å°æ‰¾é›¶é—¨é™
			changeOutput := &transaction.TxOutput{
				Owner: deployerAddrBytes,
				LockingConditions: []*transaction.LockingCondition{
					{
						Condition: &transaction.LockingCondition_SingleKeyLock{
							SingleKeyLock: &transaction.SingleKeyLock{
								KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
									RequiredAddressHash: deployerAddrBytes,
								},
								RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
								SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
							},
						},
					},
				},
				OutputContent: &transaction.TxOutput_Asset{
					Asset: &transaction.AssetOutput{
						AssetContent: &transaction.AssetOutput_NativeCoin{
							NativeCoin: &transaction.NativeCoinAsset{
								Amount: strconv.FormatUint(uint64(changeFloat*1e8), 10), // ğŸ”¥ ä¿®å¤ï¼šè½¬æ¢ä¸ºæ•´æ•°weiå­—ç¬¦ä¸²
							},
						},
					},
				},
			}
			outputs = append(outputs, changeOutput)

			if s.logger != nil {
				s.logger.Debug(fmt.Sprintf("ğŸ’° æ·»åŠ æ‰¾é›¶è¾“å‡º - é‡‘é¢: %s", changeAmount))
			}
		}
	}

	if s.logger != nil {
		s.logger.Info(fmt.Sprintf("âœ… åˆçº¦è¾“å‡ºæ„å»ºå®Œæˆ - æ€»è¾“å‡ºæ•°: %d", len(outputs)))
	}

	return outputs, nil
}

// buildCompleteTransaction æ„å»ºå®Œæ•´äº¤æ˜“
//
// ğŸ—ï¸ **å®Œæ•´äº¤æ˜“æ„å»ºå™¨**
//
// æ ¹æ®è¾“å…¥å’Œè¾“å‡ºæ„å»ºå®Œæ•´çš„äº¤æ˜“ç»“æ„ã€‚
//
// å‚æ•°ï¼š
//   - inputs: äº¤æ˜“è¾“å…¥åˆ—è¡¨
//   - outputs: äº¤æ˜“è¾“å‡ºåˆ—è¡¨
//
// è¿”å›ï¼š
//   - *transaction.Transaction: å®Œæ•´äº¤æ˜“
//   - error: æ„å»ºé”™è¯¯
func (s *ContractDeployService) buildCompleteTransaction(
	inputs []*transaction.TxInput,
	outputs []*transaction.TxOutput,
) (*transaction.Transaction, error) {
	if len(inputs) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“è¾“å…¥ä¸èƒ½ä¸ºç©º")
	}
	if len(outputs) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“è¾“å‡ºä¸èƒ½ä¸ºç©º")
	}

	// æ„å»ºåŸºç¡€äº¤æ˜“
	// ğŸ”§ æ„å»ºäº¤æ˜“åŸºç¡€ä¿¡æ¯
	// æ³¨æ„ï¼šNonceå°†åœ¨äº¤æ˜“ç­¾åé˜¶æ®µç”±TransactionSignServiceè®¾ç½®
	// ChainIdå½“å‰ä½¿ç”¨ç¡¬ç¼–ç å€¼ï¼Œç”Ÿäº§ç¯å¢ƒéœ€è¦ä»é…ç½®æœåŠ¡è·å–
	tx := &transaction.Transaction{
		Version:           1,
		Inputs:            inputs,
		Outputs:           outputs,
		Nonce:             0, // å ä½ç¬¦ï¼Œå®é™…å€¼åœ¨ç­¾åæ—¶è®¾ç½®
		CreationTimestamp: uint64(time.Now().Unix()),
		ChainId:           s.getChainIdBytes(), // ä»é…ç½®æˆ–é»˜è®¤å€¼è·å–
	}

	return tx, nil
}

// cacheTransaction ç¼“å­˜äº¤æ˜“å¹¶è¿”å›å“ˆå¸Œ
//
// ğŸ’¾ **äº¤æ˜“ç¼“å­˜å·¥å…·**
//
// è®¡ç®—äº¤æ˜“å“ˆå¸Œå¹¶å°†æœªç­¾åäº¤æ˜“å­˜å‚¨åˆ°ç¼“å­˜ä¸­ï¼Œä¾›åç»­ç­¾åä½¿ç”¨ã€‚
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: æœªç­¾åäº¤æ˜“
//
// è¿”å›ï¼š
//   - []byte: äº¤æ˜“å“ˆå¸Œ
//   - error: ç¼“å­˜é”™è¯¯
func (s *ContractDeployService) cacheTransaction(
	ctx context.Context,
	tx *transaction.Transaction,
) ([]byte, error) {
	// ========== è®¡ç®—ç»Ÿä¸€äº¤æ˜“å“ˆå¸Œ ==========
	txHash, err := internal.ComputeTransactionHash(ctx, s.hashServiceClient, tx, false, s.logger)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %v", err)
	}

	// åˆ›å»ºé»˜è®¤ç¼“å­˜é…ç½®
	config := internal.GetDefaultCacheConfig()

	// å°†äº¤æ˜“ç¼“å­˜åˆ°å†…å­˜å­˜å‚¨
	err = internal.CacheUnsignedTransaction(ctx, s.cacheStore, txHash, tx, config, s.logger)
	if err != nil {
		return nil, fmt.Errorf("ç¼“å­˜äº¤æ˜“å¤±è´¥: %v", err)
	}

	if s.logger != nil {
		s.logger.Debug(fmt.Sprintf("ğŸ’¾ åˆçº¦éƒ¨ç½²äº¤æ˜“å·²ç¼“å­˜ - hash: %x", txHash))
	}

	return txHash, nil
}

// calculateAddressFromPrivateKey ä»ç§é’¥è®¡ç®—åœ°å€ï¼ˆæ— çŠ¶æ€è®¾è®¡çš„æ ¸å¿ƒæ–¹æ³•ï¼‰
//
// å®ç°å®Œæ•´çš„ç§é’¥åˆ°åœ°å€çš„æ¨å¯¼æµç¨‹ï¼š
// ç§é’¥ â†’ å…¬é’¥(secp256k1) â†’ åœ°å€(Base58Check)
//
// å‚æ•°ï¼š
//   - privateKey: 32å­—èŠ‚ç§é’¥
//
// è¿”å›ï¼š
//   - string: WESæ ‡å‡†åœ°å€
//   - error: è®¡ç®—å¤±è´¥æ—¶çš„é”™è¯¯
func (s *ContractDeployService) calculateAddressFromPrivateKey(privateKey []byte) (string, error) {
	// 1. ä»ç§é’¥å¯¼å‡ºå…¬é’¥
	publicKey, err := s.keyManager.DerivePublicKey(privateKey)
	if err != nil {
		return "", fmt.Errorf("ä»ç§é’¥å¯¼å‡ºå…¬é’¥å¤±è´¥: %v", err)
	}

	// 2. ä»å…¬é’¥ç”Ÿæˆåœ°å€
	address, err := s.addressManager.PublicKeyToAddress(publicKey)
	if err != nil {
		return "", fmt.Errorf("ä»å…¬é’¥ç”Ÿæˆåœ°å€å¤±è´¥: %v", err)
	}

	return address, nil
}

// ============================================================================
//                              å†…éƒ¨UTXOé€‰æ‹©æ–¹æ³•
// ============================================================================

// selectUTXOsForDeploy ä¸ºåˆçº¦éƒ¨ç½²é€‰æ‹©UTXOï¼ˆå†…éƒ¨æ–¹æ³•ï¼‰
func (s *ContractDeployService) selectUTXOsForDeploy(ctx context.Context, deployerAddr []byte, amountStr string, tokenID string) ([]*transaction.TxInput, string, error) {
	targetAmount, err := parseAmount(amountStr)
	if err != nil {
		return nil, "", fmt.Errorf("é‡‘é¢è§£æå¤±è´¥: %v", err)
	}

	assetCategory := utxo.UTXOCategory_UTXO_CATEGORY_ASSET
	allUTXOs, err := s.utxoManager.GetUTXOsByAddress(ctx, deployerAddr, &assetCategory, true)
	if err != nil {
		return nil, "", fmt.Errorf("è·å–UTXOå¤±è´¥: %v", err)
	}

	if len(allUTXOs) == 0 {
		return nil, "", fmt.Errorf("åœ°å€æ²¡æœ‰å¯ç”¨UTXO")
	}

	var selectedInputs []*transaction.TxInput
	var totalSelected uint64 = 0

	for _, utxoItem := range allUTXOs {
		utxoAmount := extractUTXOAmount(utxoItem)
		if utxoAmount == 0 {
			continue
		}

		txInput := &transaction.TxInput{
			PreviousOutput: &transaction.OutPoint{
				TxId:        utxoItem.Outpoint.TxId,
				OutputIndex: utxoItem.Outpoint.OutputIndex,
			},
			IsReferenceOnly: false,
			Sequence:        0xffffffff,
		}

		selectedInputs = append(selectedInputs, txInput)
		totalSelected += utxoAmount

		if totalSelected >= targetAmount {
			break
		}
	}

	if totalSelected < targetAmount {
		return nil, "", fmt.Errorf("ä½™é¢ä¸è¶³ï¼Œéœ€è¦: %d, å¯ç”¨: %d", targetAmount, totalSelected)
	}

	changeAmount := totalSelected - targetAmount
	changeStr := formatAmount(changeAmount)

	return selectedInputs, changeStr, nil
}

// ============================================================================
//
//	ç¼–è¯‘æ—¶æ¥å£æ£€æŸ¥
//
// ============================================================================
// ============================================================================
//
//	çœŸå®å®ç°ç»„ä»¶å®šä¹‰
//
// ============================================================================

// ============================================================================
//
//	åˆçº¦éƒ¨ç½²å¤„ç†å™¨å®šä¹‰
//
// ============================================================================

// ============================================================================
//
//	åˆçº¦éƒ¨ç½²è¾…åŠ©æ–¹æ³•
//
// ============================================================================
func (s *ContractDeployService) enhanceProvidedConfig(
	config *resourcepb.ContractExecutionConfig,
	wasmCode []byte,
) (*resourcepb.ContractExecutionConfig, error) {
	// ç®€åŒ–å®ç°ï¼šå¦‚æœç¼ºå°‘å¯¼å‡ºå‡½æ•°ï¼Œä½¿ç”¨æ ‡å‡†é»˜è®¤å€¼
	if len(config.ExportedFunctions) == 0 {
		config.ExportedFunctions = []string{"init", "invoke", "query"}
	}
	return config, nil
}

func (s *ContractDeployService) storeContractResource(
	ctx context.Context,
	filePath string,
	wasmCode []byte,
) ([]byte, error) {
	metadata := map[string]string{
		"type":       "contract",
		"mime_type":  "application/wasm",
		"size":       fmt.Sprintf("%d", len(wasmCode)),
		"created_at": fmt.Sprintf("%d", time.Now().Unix()),
		"file_path":  filePath,
	}

	return s.resourceManager.StoreResourceFile(ctx, filePath, metadata)
}

func (s *ContractDeployService) getSmartDefaultConfig() *resourcepb.ContractExecutionConfig {
	return &resourcepb.ContractExecutionConfig{
		AbiVersion: "1.0",
		ExportedFunctions: []string{
			"_start", "main", // æ ‡å‡†å…¥å£å‡½æ•°
			"init", "invoke", // ä¼ ç»Ÿåˆçº¦å‡½æ•°
			"query", "upgrade", // æ‰©å±•å‡½æ•°
		},
		ExecutionParams: map[string]string{
			"max_memory":     "16777216", // 16MBå†…å­˜
			"max_stack_size": "1048576",  // 1MBæ ˆ
			"gas_limit":      "5000000",  // 500ä¸‡æ‰§è¡Œè´¹ç”¨
			"default_config": "true",     // æ ‡è®°ä¸ºé»˜è®¤é…ç½®
		},
	}
}

// ============================================================================
//
//	ğŸ¯ æ–°å¢ï¼šexecutionæ¥å£é›†æˆæ–¹æ³•
//
// ============================================================================

// validateWasmWithExecutionEngine ä½¿ç”¨EngineManageréªŒè¯WASMå­—èŠ‚ç ï¼ˆæ–°å¢ï¼‰
//
// ğŸ¯ **æ–¹æ³•èŒè´£**ï¼š
// é€šè¿‡çœŸå®çš„executionæ¥å£éªŒè¯WASMåˆçº¦çš„å¯æ‰§è¡Œæ€§
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡
//   - wasmCode: WASMå­—èŠ‚ç 
//
// è¿”å›ï¼š
//   - error: éªŒè¯å¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯

// ç¡®ä¿ ContractDeployService å®ç°äº†æ‰€éœ€çš„æ¥å£éƒ¨åˆ†
var _ interface {
	DeployContract(context.Context, []byte, string, *resourcepb.ContractExecutionConfig, string, string, ...*types.ResourceDeployOptions) ([]byte, error)
} = (*ContractDeployService)(nil)
