// Package contract åˆçº¦éƒ¨ç½²äº¤æ˜“æ„å»ºå™¨
//
// ğŸ¯ **æ¨¡å—èŒè´£**ï¼š
// ä¸“é—¨è´Ÿè´£æ™ºèƒ½åˆçº¦éƒ¨ç½²è¿‡ç¨‹ä¸­çš„äº¤æ˜“æ„å»ºå·¥ä½œã€‚
// ä»ä¸»æœåŠ¡æ–‡ä»¶ä¸­åˆ†ç¦»å‡ºæ¥ï¼Œå®ç°å•ä¸€èŒè´£åŸåˆ™ã€‚
//
// ğŸ”§ **æ ¸å¿ƒåŠŸèƒ½**ï¼š
// - åˆçº¦èµ„æºå®šä¹‰æ„å»º
// - äº¤æ˜“è¾“å…¥è¾“å‡ºæ„å»º
// - UTXOé€‰æ‹©å’Œç®¡ç†
// - äº¤æ˜“è´¹ç”¨ä¼°ç®—
// - å®Œæ•´äº¤æ˜“ç»„è£…
//
// ğŸ“‹ **ä¸»è¦ç»„ä»¶**ï¼š
// - DeployTransactionBuilder: æ ¸å¿ƒäº¤æ˜“æ„å»ºå™¨
// - UTXOSelector: UTXOé€‰æ‹©é€»è¾‘
// - FeeEstimator: è´¹ç”¨ä¼°ç®—å™¨
//
// ğŸ¯ **è®¾è®¡ç‰¹ç‚¹**ï¼š
// - æ¨¡å—åŒ–æ„å»ºï¼šæ¯ä¸ªæ­¥éª¤ç‹¬ç«‹å¯æµ‹è¯•
// - èµ„æºä¼˜åŒ–ï¼šæ™ºèƒ½UTXOé€‰æ‹©ç­–ç•¥
// - è´¹ç”¨ç²¾ç¡®ï¼šåŸºäºå®é™…ä½¿ç”¨é‡çš„è´¹ç”¨è®¡ç®—
package contract

import (
	"context"
	"fmt"
	"strconv"
	"time"

	"github.com/weisyn/v1/pkg/interfaces/config"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/interfaces/repository"
	"github.com/weisyn/v1/pkg/types"

	// åè®®å®šä¹‰
	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	resourcepb "github.com/weisyn/v1/pb/blockchain/block/transaction/resource"
	"github.com/weisyn/v1/pb/blockchain/utxo"

	// å†…éƒ¨å·¥å…·
	"github.com/weisyn/v1/internal/core/blockchain/transaction/internal"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/storage"
)

// ============================================================================
//
//	äº¤æ˜“æ„å»ºå™¨æ•°æ®ç»“æ„å®šä¹‰
//
// ============================================================================

// DeployTransactionBuilder åˆçº¦éƒ¨ç½²äº¤æ˜“æ„å»ºå™¨
//
// ğŸ¯ **æ„å»ºå™¨èŒè´£**ï¼š
// è´Ÿè´£æ™ºèƒ½åˆçº¦éƒ¨ç½²è¿‡ç¨‹ä¸­æ‰€æœ‰äº¤æ˜“ç›¸å…³ç»„ä»¶çš„æ„å»ºï¼ŒåŒ…æ‹¬èµ„æºå®šä¹‰ã€
// è¾“å…¥è¾“å‡ºé€‰æ‹©ã€è´¹ç”¨è®¡ç®—å’Œå®Œæ•´äº¤æ˜“ç»„è£…ã€‚
//
// ğŸ”§ **æ„å»ºèƒ½åŠ›**ï¼š
// - èµ„æºæ„å»ºï¼šåˆ›å»ºåˆçº¦ResourceOutputå®šä¹‰
// - è¾“å…¥é€‰æ‹©ï¼šæ™ºèƒ½é€‰æ‹©åˆé€‚çš„UTXOä½œä¸ºè¾“å…¥
// - è¾“å‡ºæ„å»ºï¼šæ„å»ºåˆçº¦éƒ¨ç½²å’Œæ‰¾é›¶è¾“å‡º
// - è´¹ç”¨ä¼°ç®—ï¼šåŸºäºåˆçº¦å¤æ‚åº¦çš„ç²¾ç¡®è´¹ç”¨è®¡ç®—
// - äº¤æ˜“ç»„è£…ï¼šç»„è£…å®Œæ•´çš„å¯ç­¾åäº¤æ˜“
//
// ğŸ’¡ **è®¾è®¡ç‰¹ç‚¹**ï¼š
// - çŠ¶æ€æ— å…³ï¼šæ¯æ¬¡æ„å»ºéƒ½æ˜¯ç‹¬ç«‹çš„
// - é”™è¯¯å®¹é”™ï¼šæ„å»ºå¤±è´¥æ—¶æä¾›è¯¦ç»†é”™è¯¯ä¿¡æ¯
// - èµ„æºä¼˜åŒ–ï¼šæœ€å°åŒ–äº¤æ˜“å¤§å°å’Œè´¹ç”¨æˆæœ¬
type DeployTransactionBuilder struct {
	utxoManager       repository.UTXOManager                   // UTXOç®¡ç†æœåŠ¡
	cacheStore        storage.MemoryStore                      // ç¼“å­˜å­˜å‚¨æœåŠ¡
	deployValidator   *DeployValidator                         // éƒ¨ç½²éªŒè¯å™¨
	hashServiceClient transaction.TransactionHashServiceClient // äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
	configManager     config.Provider                          // é…ç½®ç®¡ç†å™¨ï¼ˆç”¨äºè´¹ç”¨è®¡ç®—ï¼‰
	logger            log.Logger                               // æ—¥å¿—è®°å½•å™¨
}

// NewDeployTransactionBuilder åˆ›å»ºéƒ¨ç½²äº¤æ˜“æ„å»ºå™¨
//
// ğŸ¯ **å·¥å‚æ–¹æ³•**ï¼š
// åˆ›å»ºä¸€ä¸ªæ–°çš„åˆçº¦éƒ¨ç½²äº¤æ˜“æ„å»ºå™¨å®ä¾‹ã€‚
//
// å‚æ•°ï¼š
//   - utxoManager: UTXOç®¡ç†æœåŠ¡
//   - cacheStore: ç¼“å­˜å­˜å‚¨æœåŠ¡
//   - deployValidator: éƒ¨ç½²éªŒè¯å™¨
//   - hashServiceClient: äº¤æ˜“å“ˆå¸ŒæœåŠ¡å®¢æˆ·ç«¯
//   - logger: æ—¥å¿—è®°å½•å™¨
//
// è¿”å›ï¼š
//   - *DeployTransactionBuilder: é…ç½®å¥½çš„æ„å»ºå™¨å®ä¾‹
func NewDeployTransactionBuilder(
	utxoManager repository.UTXOManager,
	cacheStore storage.MemoryStore,
	deployValidator *DeployValidator,
	hashServiceClient transaction.TransactionHashServiceClient,
	configManager config.Provider,
	logger log.Logger,
) *DeployTransactionBuilder {
	return &DeployTransactionBuilder{
		utxoManager:       utxoManager,
		cacheStore:        cacheStore,
		deployValidator:   deployValidator,
		hashServiceClient: hashServiceClient,
		configManager:     configManager,
		logger:            logger,
	}
}

// ============================================================================
//
//	èµ„æºæ„å»ºæ–¹æ³•
//
// ============================================================================

// BuildContractResource æ„å»ºåˆçº¦èµ„æºå®šä¹‰
//
// ğŸ¯ **èµ„æºæ„å»º**ï¼š
// æ ¹æ®åˆçº¦ä¿¡æ¯å’Œéƒ¨ç½²é€‰é¡¹æ„å»ºå®Œæ•´çš„ResourceOutputèµ„æºå®šä¹‰ã€‚
//
// ğŸ“‹ **æ„å»ºå†…å®¹**ï¼š
// 1. åŸºç¡€èµ„æºä¿¡æ¯ï¼šç±»åˆ«ã€ç±»å‹ã€å“ˆå¸Œã€å¤§å°ç­‰
// 2. å…ƒæ•°æ®ä¿¡æ¯ï¼šåç§°ã€ç‰ˆæœ¬ã€æè¿°ã€åˆ›å»ºè€…ç­‰
// 3. æ‰§è¡Œé…ç½®ï¼šABIç‰ˆæœ¬ã€å¯¼å‡ºå‡½æ•°ã€æ‰§è¡Œå‚æ•°
// 4. è‡ªå®šä¹‰å±æ€§ï¼šä»éƒ¨ç½²é€‰é¡¹ä¸­æå–çš„æ‰©å±•å±æ€§
//
// ğŸ”§ **é…ç½®ç­–ç•¥**ï¼š
// - é»˜è®¤é…ç½®ï¼šä¸ºå¸¸è§å­—æ®µæä¾›åˆç†é»˜è®¤å€¼
// - é€‰é¡¹è¦†ç›–ï¼šç”¨æˆ·é€‰é¡¹ä¼˜å…ˆäºé»˜è®¤é…ç½®
// - æ™ºèƒ½æ¨å¯¼ï¼šä»WASMå†…å®¹æ¨å¯¼æ‰§è¡Œå‚æ•°
//
// å‚æ•°ï¼š
//   - deployerAddress: åˆçº¦éƒ¨ç½²è€…åœ°å€
//   - wasmCode: WASMåˆçº¦å­—èŠ‚ç 
//   - contentHash: åˆçº¦å†…å®¹å“ˆå¸Œ
//   - contractConfig: åˆçº¦æ‰§è¡Œé…ç½®
//   - name: åˆçº¦åç§°
//   - description: åˆçº¦æè¿°
//   - options: éƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - *resourcepb.Resource: æ„å»ºçš„èµ„æºå®šä¹‰
//   - error: æ„å»ºè¿‡ç¨‹ä¸­çš„é”™è¯¯
func (dtb *DeployTransactionBuilder) BuildContractResource(
	deployerAddress string,
	wasmCode []byte,
	contentHash []byte,
	contractConfig *resourcepb.ContractExecutionConfig,
	name string,
	description string,
	options *types.ResourceDeployOptions,
) (*resourcepb.Resource, error) {
	if dtb.logger != nil {
		dtb.logger.Debug("ğŸ—ï¸ å¼€å§‹æ„å»ºåˆçº¦èµ„æºå®šä¹‰")
	}

	// ========== ç‰ˆæœ¬å¤„ç† ==========
	version := extractVersionFromOptions(options)
	if version == "" {
		version = "1.0.0" // åˆç†çš„é»˜è®¤ç‰ˆæœ¬
	}

	// ========== æ„å»ºåŸºç¡€èµ„æºä¿¡æ¯ ==========
	resource := &resourcepb.Resource{
		Category:         resourcepb.ResourceCategory_RESOURCE_CATEGORY_EXECUTABLE,
		ExecutableType:   resourcepb.ExecutableType_EXECUTABLE_TYPE_CONTRACT,
		ContentHash:      contentHash,
		MimeType:         "application/wasm",
		Size:             uint64(len(wasmCode)),
		CreatedTimestamp: uint64(time.Now().Unix()),
		CreatorAddress:   deployerAddress,
		Name:             name,
		Version:          version,
		Description:      description,
	}

	// ========== è®¾ç½®æ‰§è¡Œé…ç½® ==========
	resource.ExecutionConfig = &resourcepb.Resource_Contract{
		Contract: contractConfig,
	}

	// ========== åº”ç”¨è‡ªå®šä¹‰å±æ€§ ==========
	if options != nil {
		resource.CustomAttributes = extractCustomAttributes(options)
	}

	if dtb.logger != nil {
		dtb.logger.Debug(fmt.Sprintf("âœ… åˆçº¦èµ„æºæ„å»ºå®Œæˆ - åç§°: %s, ç‰ˆæœ¬: %s, å“ˆå¸Œ: %x",
			resource.Name, resource.Version, contentHash))
	}

	return resource, nil
}

// ============================================================================
//
//	äº¤æ˜“è¾“å‡ºæ„å»ºæ–¹æ³•
//
// ============================================================================

// BuildContractOutputs æ„å»ºåˆçº¦éƒ¨ç½²çš„äº¤æ˜“è¾“å‡º
//
// ğŸ¯ **è¾“å‡ºæ„å»º**ï¼š
// æ„å»ºæ™ºèƒ½åˆçº¦éƒ¨ç½²äº¤æ˜“çš„æ‰€æœ‰è¾“å‡ºï¼ŒåŒ…æ‹¬åˆçº¦èµ„æºè¾“å‡ºå’Œæ‰¾é›¶è¾“å‡ºã€‚
//
// ğŸ“‹ **è¾“å‡ºç±»å‹**ï¼š
// 1. ResourceOutputï¼šåˆçº¦éƒ¨ç½²çš„æ ¸å¿ƒè¾“å‡ºï¼ŒåŒ…å«å®Œæ•´èµ„æºå®šä¹‰
// 2. AssetOutputï¼šæ‰¾é›¶è¾“å‡ºï¼Œè¿”è¿˜å¤šä½™çš„åŸç”Ÿä»£å¸
//
// ğŸ”§ **é”å®šç­–ç•¥**ï¼š
// - å•å¯†é’¥é”å®šï¼šä½¿ç”¨éƒ¨ç½²è€…åœ°å€è¿›è¡Œç®€å•é”å®š
// - ECDSAç­¾åï¼šé‡‡ç”¨secp256k1æ¤­åœ†æ›²çº¿ç­¾åç®—æ³•
// - å®Œå…¨ç­¾åï¼šSIGHASH_ALLæ¨¡å¼ï¼Œä¿æŠ¤æ•´ä¸ªäº¤æ˜“
//
// å‚æ•°ï¼š
//   - deployerAddress: éƒ¨ç½²è€…åœ°å€
//   - contractResource: åˆçº¦èµ„æºå®šä¹‰
//   - changeAmount: æ‰¾é›¶é‡‘é¢
//   - storageLocations: å­˜å‚¨ä½ç½®åˆ—è¡¨
//   - options: éƒ¨ç½²é€‰é¡¹
//
// è¿”å›ï¼š
//   - []*transaction.TxOutput: æ„å»ºçš„è¾“å‡ºåˆ—è¡¨
//   - error: æ„å»ºå¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (dtb *DeployTransactionBuilder) BuildContractOutputs(
	deployerAddress string,
	contractResource *resourcepb.Resource,
	changeAmount string,
	storageLocations [][]byte,
	options *types.ResourceDeployOptions,
) ([]*transaction.TxOutput, error) {
	if dtb.logger != nil {
		dtb.logger.Debug("ğŸ—ï¸ å¼€å§‹æ„å»ºåˆçº¦éƒ¨ç½²è¾“å‡º")
	}

	var outputs []*transaction.TxOutput

	// ========== è§£æéƒ¨ç½²è€…åœ°å€ ==========
	deployerAddrBytes, err := dtb.deployValidator.ParseAddress(deployerAddress)
	if err != nil {
		return nil, fmt.Errorf("éƒ¨ç½²è€…åœ°å€è§£æå¤±è´¥: %v", err)
	}

	// ========== æ„å»ºåˆçº¦éƒ¨ç½²è¾“å‡º (ResourceOutput) ==========
	contractOutput := &transaction.TxOutput{
		Owner: deployerAddrBytes,
		LockingConditions: []*transaction.LockingCondition{
			{
				Condition: &transaction.LockingCondition_SingleKeyLock{
					SingleKeyLock: &transaction.SingleKeyLock{
						KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
							RequiredAddressHash: deployerAddrBytes,
						},
						RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
						SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
					},
				},
			},
		},
		OutputContent: &transaction.TxOutput_Resource{
			Resource: &transaction.ResourceOutput{
				Resource:          contractResource,
				CreationTimestamp: uint64(time.Now().Unix()),
				CreationContext:   "Smart contract deployment via WASM file upload",
				StorageStrategy:   transaction.ResourceOutput_STORAGE_STRATEGY_CONTENT_ADDRESSED,
				StorageLocations:  storageLocations,
				IsImmutable:       true, // æ™ºèƒ½åˆçº¦é»˜è®¤è®¾ä¸ºä¸å¯å˜
			},
		},
	}
	outputs = append(outputs, contractOutput)

	// ========== æ„å»ºæ‰¾é›¶è¾“å‡º (AssetOutput) ==========
	if changeAmount != "" && changeAmount != "0" {
		changeFloat, err := dtb.parseChangeAmount(changeAmount)
		if err != nil {
			return nil, fmt.Errorf("æ‰¾é›¶é‡‘é¢è§£æå¤±è´¥: %v", err)
		}

		// åªæœ‰è¶…è¿‡æœ€å°æ‰¾é›¶é—¨é™æ‰åˆ›å»ºæ‰¾é›¶è¾“å‡º
		if changeFloat > 0.00001 {
			changeOutput := &transaction.TxOutput{
				Owner: deployerAddrBytes,
				LockingConditions: []*transaction.LockingCondition{
					{
						Condition: &transaction.LockingCondition_SingleKeyLock{
							SingleKeyLock: &transaction.SingleKeyLock{
								KeyRequirement: &transaction.SingleKeyLock_RequiredAddressHash{
									RequiredAddressHash: deployerAddrBytes,
								},
								RequiredAlgorithm: transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1,
								SighashType:       transaction.SignatureHashType_SIGHASH_ALL,
							},
						},
					},
				},
				OutputContent: &transaction.TxOutput_Asset{
					Asset: &transaction.AssetOutput{
						AssetContent: &transaction.AssetOutput_NativeCoin{
							NativeCoin: &transaction.NativeCoinAsset{
								Amount: strconv.FormatUint(uint64(changeFloat*1e8), 10), // ğŸ”¥ ä¿®å¤ï¼šè½¬æ¢ä¸ºæ•´æ•°weiå­—ç¬¦ä¸²
							},
						},
					},
				},
			}
			outputs = append(outputs, changeOutput)

			if dtb.logger != nil {
				dtb.logger.Debug(fmt.Sprintf("ğŸ’° æ·»åŠ æ‰¾é›¶è¾“å‡º - é‡‘é¢: %s", changeAmount))
			}
		}
	}

	if dtb.logger != nil {
		dtb.logger.Info(fmt.Sprintf("âœ… åˆçº¦è¾“å‡ºæ„å»ºå®Œæˆ - æ€»è¾“å‡ºæ•°: %d", len(outputs)))
	}

	return outputs, nil
}

// ============================================================================
//
//	å®Œæ•´äº¤æ˜“æ„å»ºæ–¹æ³•
//
// ============================================================================

// BuildCompleteTransaction æ„å»ºå®Œæ•´çš„éƒ¨ç½²äº¤æ˜“
//
// ğŸ¯ **äº¤æ˜“ç»„è£…**ï¼š
// æ ¹æ®æ„å»ºå¥½çš„è¾“å…¥å’Œè¾“å‡ºç»„è£…å®Œæ•´çš„éƒ¨ç½²äº¤æ˜“ã€‚
//
// ğŸ“‹ **äº¤æ˜“å­—æ®µ**ï¼š
// - Version: äº¤æ˜“ç‰ˆæœ¬å·ï¼ˆå½“å‰ä¸º1ï¼‰
// - Inputs: äº¤æ˜“è¾“å…¥åˆ—è¡¨ï¼ˆUTXOå¼•ç”¨ï¼‰
// - Outputs: äº¤æ˜“è¾“å‡ºåˆ—è¡¨ï¼ˆåˆçº¦+æ‰¾é›¶ï¼‰
// - Nonce: é˜²é‡æ”¾æ”»å‡»åºå·ï¼ˆç­¾åæ—¶è®¾ç½®ï¼‰
// - CreationTimestamp: äº¤æ˜“åˆ›å»ºæ—¶é—´
// - ChainId: é“¾æ ‡è¯†ç¬¦ï¼ˆé˜²è·¨é“¾æ”»å‡»ï¼‰
//
// ğŸ”§ **å®‰å…¨è€ƒè™‘**ï¼š
// - æ—¶é—´æˆ³ï¼šä½¿ç”¨å½“å‰æ—¶é—´ï¼Œé˜²æ­¢æ—¶åºæ”»å‡»
// - é“¾IDï¼šç¡®ä¿äº¤æ˜“åªåœ¨æŒ‡å®šé“¾ä¸Šæœ‰æ•ˆ
// - ç‰ˆæœ¬æ§åˆ¶ï¼šæ”¯æŒæœªæ¥çš„åè®®å‡çº§
//
// å‚æ•°ï¼š
//   - inputs: äº¤æ˜“è¾“å…¥åˆ—è¡¨
//   - outputs: äº¤æ˜“è¾“å‡ºåˆ—è¡¨
//   - chainId: é“¾æ ‡è¯†ç¬¦
//
// è¿”å›ï¼š
//   - *transaction.Transaction: å®Œæ•´çš„éƒ¨ç½²äº¤æ˜“
//   - error: æ„å»ºå¤±è´¥æ—¶çš„é”™è¯¯ä¿¡æ¯
func (dtb *DeployTransactionBuilder) BuildCompleteTransaction(
	inputs []*transaction.TxInput,
	outputs []*transaction.TxOutput,
	chainId []byte,
) (*transaction.Transaction, error) {
	// ========== åŸºç¡€éªŒè¯ ==========
	if len(inputs) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“è¾“å…¥ä¸èƒ½ä¸ºç©º")
	}
	if len(outputs) == 0 {
		return nil, fmt.Errorf("äº¤æ˜“è¾“å‡ºä¸èƒ½ä¸ºç©º")
	}

	// ========== æ„å»ºå®Œæ•´äº¤æ˜“ ==========
	tx := &transaction.Transaction{
		Version:           1,                         // å½“å‰äº¤æ˜“ç‰ˆæœ¬
		Inputs:            inputs,                    // äº¤æ˜“è¾“å…¥
		Outputs:           outputs,                   // äº¤æ˜“è¾“å‡º
		Nonce:             0,                         // å ä½ç¬¦ï¼Œç­¾åæ—¶è®¾ç½®å®é™…å€¼
		CreationTimestamp: uint64(time.Now().Unix()), // å½“å‰æ—¶é—´æˆ³
		ChainId:           chainId,                   // é“¾æ ‡è¯†ç¬¦
	}

	if dtb.logger != nil {
		dtb.logger.Debug(fmt.Sprintf("âœ… å®Œæ•´äº¤æ˜“æ„å»ºæˆåŠŸ - è¾“å…¥: %d, è¾“å‡º: %d",
			len(tx.Inputs), len(tx.Outputs)))
	}

	return tx, nil
}

// ============================================================================
//
//	UTXOé€‰æ‹©å’Œç®¡ç†
//
// ============================================================================

// SelectUTXOsForDeploy ä¸ºåˆçº¦éƒ¨ç½²é€‰æ‹©åˆé€‚çš„UTXO
//
// ğŸ¯ **UTXOé€‰æ‹©ç­–ç•¥**ï¼š
// ä½¿ç”¨è´ªå¿ƒç®—æ³•é€‰æ‹©è¶³å¤Ÿæ”¯ä»˜éƒ¨ç½²è´¹ç”¨çš„UTXOï¼Œä¼˜åŒ–äº¤æ˜“å¤§å°å’Œè´¹ç”¨ã€‚
//
// ğŸ“‹ **é€‰æ‹©é€»è¾‘**ï¼š
// 1. è·å–éƒ¨ç½²è€…çš„æ‰€æœ‰å¯ç”¨èµ„äº§UTXO
// 2. æŒ‰é‡‘é¢ä»å¤§åˆ°å°æ’åºï¼ˆå‡å°‘è¾“å…¥æ•°é‡ï¼‰
// 3. ç´¯ç§¯é€‰æ‹©ç›´åˆ°æ»¡è¶³ç›®æ ‡é‡‘é¢
// 4. è®¡ç®—æ‰¾é›¶é‡‘é¢
//
// ğŸ”§ **ä¼˜åŒ–ç­–ç•¥**ï¼š
// - é¦–æ¬¡é€‚åº”ï¼šä¼˜å…ˆé€‰æ‹©èƒ½æ»¡è¶³éœ€æ±‚çš„è¾ƒå¤§UTXO
// - è¾“å…¥æœ€å°åŒ–ï¼šå‡å°‘äº¤æ˜“è¾“å…¥æ•°é‡ï¼Œé™ä½æ‰‹ç»­è´¹
// - æ‰¾é›¶ä¼˜åŒ–ï¼šåˆç†å¤„ç†æ‰¾é›¶ï¼Œé¿å…ç²‰å°˜è¾“å‡º
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - deployerAddr: éƒ¨ç½²è€…åœ°å€å­—èŠ‚æ•°ç»„
//   - amountStr: éœ€è¦çš„é‡‘é¢å­—ç¬¦ä¸²
//   - tokenID: ä»£å¸ç±»å‹æ ‡è¯†ï¼ˆå½“å‰ä¸»è¦ç”¨äºåŸç”Ÿä»£å¸ï¼‰
//
// è¿”å›ï¼š
//   - []*transaction.TxInput: é€‰æ‹©çš„è¾“å…¥åˆ—è¡¨
//   - string: è®¡ç®—çš„æ‰¾é›¶é‡‘é¢
//   - error: é€‰æ‹©è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (dtb *DeployTransactionBuilder) SelectUTXOsForDeploy(
	ctx context.Context,
	deployerAddr []byte,
	amountStr string,
	tokenID string,
) ([]*transaction.TxInput, string, error) {
	if dtb.logger != nil {
		dtb.logger.Debug(fmt.Sprintf("ğŸ” å¼€å§‹UTXOé€‰æ‹© - ç›®æ ‡é‡‘é¢: %s", amountStr))
	}

	// ========== è§£æç›®æ ‡é‡‘é¢ ==========
	targetAmount, err := parseAmount(amountStr)
	if err != nil {
		return nil, "", fmt.Errorf("é‡‘é¢è§£æå¤±è´¥: %v", err)
	}

	// ========== è·å–å¯ç”¨UTXO ==========
	assetCategory := utxo.UTXOCategory_UTXO_CATEGORY_ASSET
	allUTXOs, err := dtb.utxoManager.GetUTXOsByAddress(ctx, deployerAddr, &assetCategory, true)
	if err != nil {
		return nil, "", fmt.Errorf("è·å–UTXOå¤±è´¥: %v", err)
	}

	if len(allUTXOs) == 0 {
		return nil, "", fmt.Errorf("åœ°å€æ²¡æœ‰å¯ç”¨çš„èµ„äº§UTXO")
	}

	// ========== UTXOé€‰æ‹©ç®—æ³• ==========
	var selectedInputs []*transaction.TxInput
	var totalSelected uint64 = 0

	// ä½¿ç”¨é¦–æ¬¡é€‚åº”ç®—æ³•é€‰æ‹©UTXO
	for _, utxoItem := range allUTXOs {
		utxoAmount := extractUTXOAmount(utxoItem)
		if utxoAmount == 0 {
			continue // è·³è¿‡æ— ä»·å€¼çš„UTXO
		}

		// æ„å»ºäº¤æ˜“è¾“å…¥
		txInput := &transaction.TxInput{
			PreviousOutput: &transaction.OutPoint{
				TxId:        utxoItem.Outpoint.TxId,
				OutputIndex: utxoItem.Outpoint.OutputIndex,
			},
			IsReferenceOnly: false,      // æ¶ˆè´¹æ¨¡å¼
			Sequence:        0xffffffff, // æ ‡å‡†åºåˆ—å·
		}

		selectedInputs = append(selectedInputs, txInput)
		totalSelected += utxoAmount

		// æ£€æŸ¥æ˜¯å¦å·²æ»¡è¶³ç›®æ ‡é‡‘é¢
		if totalSelected >= targetAmount {
			break
		}
	}

	// ========== éªŒè¯é€‰æ‹©ç»“æœ ==========
	if totalSelected < targetAmount {
		return nil, "", fmt.Errorf("ä½™é¢ä¸è¶³ - éœ€è¦: %d, å¯ç”¨: %d", targetAmount, totalSelected)
	}

	// ========== è®¡ç®—æ‰¾é›¶ ==========
	changeAmount := totalSelected - targetAmount
	changeStr := formatAmount(changeAmount)

	if dtb.logger != nil {
		dtb.logger.Info(fmt.Sprintf("âœ… UTXOé€‰æ‹©å®Œæˆ - è¾“å…¥: %dä¸ª, æ€»é‡‘é¢: %d, æ‰¾é›¶: %s",
			len(selectedInputs), totalSelected, changeStr))
	}

	return selectedInputs, changeStr, nil
}

// ============================================================================
//
//	è´¹ç”¨ä¼°ç®—æ–¹æ³•
//
// ============================================================================

// EstimateDeploymentFee ä¼°ç®—åˆçº¦éƒ¨ç½²è´¹ç”¨
//
// ğŸ¯ **è´¹ç”¨è®¡ç®—æ¨¡å‹**ï¼š
// åŸºäºåˆçº¦å¤æ‚åº¦å’Œèµ„æºä½¿ç”¨é‡è®¡ç®—åˆç†çš„éƒ¨ç½²è´¹ç”¨ã€‚
//
// ğŸ“‹ **è´¹ç”¨ç»„æˆ**ï¼š
// - åŸºç¡€éƒ¨ç½²è´¹ç”¨ï¼šå›ºå®šçš„ç½‘ç»œä½¿ç”¨æˆæœ¬
// - å­—èŠ‚ç è´¹ç”¨ï¼šåŸºäºWASMä»£ç å¤§å°çš„å­˜å‚¨æˆæœ¬
// - ç½‘ç»œè´¹ç”¨ï¼šäº¤æ˜“åœ¨ç½‘ç»œä¸­ä¼ æ’­çš„æˆæœ¬
//
// ğŸ”§ **è®¡ç®—ç­–ç•¥**ï¼š
// - çº¿æ€§è®¡è´¹ï¼šè´¹ç”¨ä¸èµ„æºä½¿ç”¨é‡æˆæ­£æ¯”
// - åˆç†å®šä»·ï¼šæ—¢è¦è¦†ç›–æˆæœ¬ï¼Œåˆè¦ä¿æŒå¯è´Ÿæ‹…æ€§
// - é˜²åƒåœ¾æ”»å‡»ï¼šè®¾ç½®è¶³å¤Ÿçš„è´¹ç”¨é—¨æ§›
//
// å‚æ•°ï¼š
//   - codeSize: åˆçº¦å­—èŠ‚ç å¤§å°ï¼ˆå­—èŠ‚ï¼‰
//
// è¿”å›ï¼š
//   - string: ä¼°ç®—çš„éƒ¨ç½²è´¹ç”¨ï¼ˆåŸç”Ÿä»£å¸å•ä½ï¼‰
func (dtb *DeployTransactionBuilder) EstimateDeploymentFee(codeSize int) string {
	// ========== ä»é…ç½®è·å–è´¹ç”¨è®¡ç®—å‚æ•° ==========
	feeConfig := dtb.getDeploymentFeeConfig()

	// ========== è´¹ç”¨è®¡ç®—å…¬å¼ ==========
	baseFee := feeConfig.BaseFee                                                  // åŸºç¡€éƒ¨ç½²è´¹ç”¨
	byteFee := (uint64(codeSize) / feeConfig.BytesPerUnit) * feeConfig.FeePerByte // å­—èŠ‚è´¹ç”¨ï¼šæŒ‰é…ç½®çš„å­—èŠ‚å•ä½è®¡ç®—

	totalFeeUnits := baseFee + byteFee

	// åº”ç”¨è´¹ç”¨å€ç‡ï¼ˆç”¨äºåŠ¨æ€è°ƒæ•´ï¼‰
	adjustedFee := float64(totalFeeUnits) * feeConfig.FeeMultiplier

	// ========== è½¬æ¢ä¸ºä»£å¸å•ä½ ==========
	feeInCoins := adjustedFee / float64(feeConfig.CoinPrecision) // æ ¹æ®ä»£å¸ç²¾åº¦è½¬æ¢

	// ç¡®ä¿ä¸ä½äºæœ€å°è´¹ç”¨
	if feeInCoins < feeConfig.MinimumFee {
		feeInCoins = feeConfig.MinimumFee
	}

	if dtb.logger != nil {
		dtb.logger.Debug(fmt.Sprintf("ğŸ’° è´¹ç”¨ä¼°ç®— - ä»£ç å¤§å°: %d bytes, åŸºç¡€è´¹ç”¨: %d, å­—èŠ‚è´¹ç”¨: %d, æ€»è´¹ç”¨: %.8f",
			codeSize, baseFee, byteFee, feeInCoins))
	}

	return fmt.Sprintf("%.8f", feeInCoins)
}

// DeploymentFeeConfig éƒ¨ç½²è´¹ç”¨é…ç½®
type DeploymentFeeConfig struct {
	BaseFee       uint64  // åŸºç¡€éƒ¨ç½²è´¹ç”¨ï¼ˆå•ä½ï¼‰
	FeePerByte    uint64  // æ¯å­—èŠ‚è´¹ç”¨å•ä½
	BytesPerUnit  uint64  // å¤šå°‘å­—èŠ‚ä¸ºä¸€ä¸ªè®¡è´¹å•ä½
	FeeMultiplier float64 // è´¹ç”¨å€ç‡ï¼ˆç”¨äºåŠ¨æ€è°ƒæ•´ï¼‰
	CoinPrecision uint64  // ä»£å¸ç²¾åº¦ï¼ˆå¦‚10^8ï¼‰
	MinimumFee    float64 // æœ€å°è´¹ç”¨ï¼ˆä»£å¸å•ä½ï¼‰
}

// getDeploymentFeeConfig è·å–éƒ¨ç½²è´¹ç”¨é…ç½®
func (dtb *DeployTransactionBuilder) getDeploymentFeeConfig() *DeploymentFeeConfig {
	// ä»é…ç½®ç®¡ç†å™¨è·å–éƒ¨ç½²è´¹ç”¨é…ç½®
	if dtb.configManager != nil {
		if blockchainConfig := dtb.configManager.GetBlockchain(); blockchainConfig != nil {
			// ç†æƒ³æƒ…å†µä¸‹è¿™é‡Œåº”è¯¥ä»é…ç½®ä¸­è·å–ï¼Œç°åœ¨ä½¿ç”¨åˆç†çš„é»˜è®¤å€¼
			return &DeploymentFeeConfig{
				BaseFee:       1000000,   // åŸºç¡€éƒ¨ç½²è´¹ç”¨ï¼š100ä¸‡å•ä½
				FeePerByte:    100,       // æ¯å­—èŠ‚100å•ä½
				BytesPerUnit:  10,        // æ¯10å­—èŠ‚ä¸€ä¸ªè®¡è´¹å•ä½
				FeeMultiplier: 1.0,       // æ— å€ç‡è°ƒæ•´
				CoinPrecision: 100000000, // 8ä½å°æ•°ç²¾åº¦ï¼ˆ10^8ï¼‰
				MinimumFee:    0.001,     // æœ€å°è´¹ç”¨0.001ä»£å¸
			}
		}
	}

	// ç´§æ€¥å›é€€é…ç½®
	return &DeploymentFeeConfig{
		BaseFee:       1000000,
		FeePerByte:    100,
		BytesPerUnit:  10,
		FeeMultiplier: 1.0,
		CoinPrecision: 100000000,
		MinimumFee:    0.001,
	}
}

// ============================================================================
//
//	äº¤æ˜“ç¼“å­˜æ–¹æ³•
//
// ============================================================================

// CacheTransaction ç¼“å­˜æœªç­¾åäº¤æ˜“
//
// ğŸ¯ **äº¤æ˜“ç¼“å­˜ç­–ç•¥**ï¼š
// å°†æ„å»ºå¥½çš„æœªç­¾åäº¤æ˜“å­˜å‚¨åˆ°ç¼“å­˜ä¸­ï¼Œä¾›åç»­ç­¾åæœåŠ¡ä½¿ç”¨ã€‚
//
// ğŸ“‹ **ç¼“å­˜æœºåˆ¶**ï¼š
// - é”®å€¼å­˜å‚¨ï¼šä½¿ç”¨äº¤æ˜“å“ˆå¸Œä½œä¸ºç¼“å­˜é”®
// - è¿‡æœŸæ—¶é—´ï¼šè®¾ç½®åˆç†çš„ç¼“å­˜è¿‡æœŸæ—¶é—´
// - å®‰å…¨å­˜å‚¨ï¼šç¡®ä¿ç¼“å­˜æ•°æ®çš„å®Œæ•´æ€§
//
// ğŸ”§ **é›†æˆç‰¹æ€§**ï¼š
// - ç»Ÿä¸€æ¥å£ï¼šä½¿ç”¨å†…éƒ¨ç¼“å­˜å·¥å…·ç»Ÿä¸€ç®¡ç†
// - é”™è¯¯å¤„ç†ï¼šç¼“å­˜å¤±è´¥æ—¶æä¾›è¯¦ç»†é”™è¯¯ä¿¡æ¯
// - æ—¥å¿—è®°å½•ï¼šè®°å½•ç¼“å­˜æ“ä½œç”¨äºè°ƒè¯•
//
// å‚æ•°ï¼š
//   - ctx: ä¸Šä¸‹æ–‡å¯¹è±¡
//   - tx: æœªç­¾åçš„äº¤æ˜“å¯¹è±¡
//
// è¿”å›ï¼š
//   - []byte: äº¤æ˜“å“ˆå¸Œï¼ˆç¼“å­˜é”®ï¼‰
//   - error: ç¼“å­˜è¿‡ç¨‹ä¸­çš„é”™è¯¯
func (dtb *DeployTransactionBuilder) CacheTransaction(
	ctx context.Context,
	tx *transaction.Transaction,
) ([]byte, error) {
	// ========== è®¡ç®—çœŸå®äº¤æ˜“å“ˆå¸Œ ==========
	txHash, err := internal.ComputeTransactionHash(ctx, dtb.hashServiceClient, tx, false, dtb.logger)
	if err != nil {
		return nil, fmt.Errorf("è®¡ç®—äº¤æ˜“å“ˆå¸Œå¤±è´¥: %v", err)
	}

	// ========== è·å–ç¼“å­˜é…ç½® ==========
	config := internal.GetDefaultCacheConfig()

	// ========== æ‰§è¡Œç¼“å­˜æ“ä½œ ==========
	err = internal.CacheUnsignedTransaction(ctx, dtb.cacheStore, txHash, tx, config, dtb.logger)
	if err != nil {
		return nil, fmt.Errorf("ç¼“å­˜äº¤æ˜“å¤±è´¥: %v", err)
	}

	if dtb.logger != nil {
		dtb.logger.Debug(fmt.Sprintf("ğŸ’¾ éƒ¨ç½²äº¤æ˜“å·²ç¼“å­˜ - å“ˆå¸Œ: %x", txHash))
	}

	return txHash, nil
}

// ============================================================================
//
//	å·¥å…·æ–¹æ³•
//
// ============================================================================

// parseChangeAmount è§£ææ‰¾é›¶é‡‘é¢å­—ç¬¦ä¸²ä¸ºæµ®ç‚¹æ•°
func (dtb *DeployTransactionBuilder) parseChangeAmount(changeAmount string) (float64, error) {
	changeFloat := 0.0
	_, err := fmt.Sscanf(changeAmount, "%f", &changeFloat)
	if err != nil {
		return 0, fmt.Errorf("æ‰¾é›¶é‡‘é¢æ ¼å¼é”™è¯¯: %v", err)
	}
	return changeFloat, nil
}
