// Package testutil æä¾› TX æ¨¡å—æµ‹è¯•çš„è¾…åŠ©å·¥å…·
//
// ğŸ§ª **æµ‹è¯•è¾…åŠ©å·¥å…·åŒ…**
//
// æœ¬åŒ…æä¾›æµ‹è¯•æ‰€éœ€çš„ Mock å¯¹è±¡ã€æµ‹è¯•æ•°æ®å’Œè¾…åŠ©å‡½æ•°ï¼Œç”¨äºç®€åŒ–æµ‹è¯•ä»£ç ç¼–å†™ã€‚
// éµå¾ª docs/system/standards/principles/testing-standards.md è§„èŒƒã€‚
package testutil

import (
	"context"
	"crypto/sha256"
	"fmt"
	"hash"
	"sync"

	"go.uber.org/zap"

	transaction "github.com/weisyn/v1/pb/blockchain/block/transaction"
	utxopb "github.com/weisyn/v1/pb/blockchain/utxo"
	"github.com/weisyn/v1/pkg/constants"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/crypto"
	"github.com/weisyn/v1/pkg/interfaces/infrastructure/log"
	"github.com/weisyn/v1/pkg/types"
)

// ==================== Mock å¯¹è±¡ ====================

// MockLogger ç»Ÿä¸€çš„æ—¥å¿—Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šæœ€å°å®ç°ï¼Œæ‰€æœ‰æ–¹æ³•è¿”å›ç©ºå€¼ï¼Œä¸è®°å½•æ—¥å¿—
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼š80%çš„æµ‹è¯•ç”¨ä¾‹ï¼Œä¸éœ€è¦éªŒè¯æ—¥å¿—è°ƒç”¨
type MockLogger struct{}

func (m *MockLogger) Debug(msg string)                          {}
func (m *MockLogger) Debugf(format string, args ...interface{}) {}
func (m *MockLogger) Info(msg string)                           {}
func (m *MockLogger) Infof(format string, args ...interface{})  {}
func (m *MockLogger) Warn(msg string)                           {}
func (m *MockLogger) Warnf(format string, args ...interface{})  {}
func (m *MockLogger) Error(msg string)                          {}
func (m *MockLogger) Errorf(format string, args ...interface{}) {}
func (m *MockLogger) Fatal(msg string)                          {}
func (m *MockLogger) Fatalf(format string, args ...interface{}) {}
func (m *MockLogger) With(args ...interface{}) log.Logger       { return m }
func (m *MockLogger) Sync() error                               { return nil }
func (m *MockLogger) GetZapLogger() *zap.Logger                 { return zap.NewNop() }

// BehavioralMockLogger è¡Œä¸ºMockæ—¥å¿—ï¼ˆè®°å½•è°ƒç”¨ï¼‰
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šè®°å½•æ‰€æœ‰æ—¥å¿—è°ƒç”¨ï¼Œç”¨äºéªŒè¯æ—¥å¿—è¡Œä¸º
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šéœ€è¦éªŒè¯æ—¥å¿—è°ƒç”¨çš„æµ‹è¯•ï¼ˆ5%çš„æµ‹è¯•ç”¨ä¾‹ï¼‰
type BehavioralMockLogger struct {
	logs  []string
	mutex sync.Mutex
}

func (m *BehavioralMockLogger) Debug(msg string) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, "DEBUG: "+msg)
}

func (m *BehavioralMockLogger) Debugf(format string, args ...interface{}) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, fmt.Sprintf("DEBUG: "+format, args...))
}

func (m *BehavioralMockLogger) Info(msg string) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, "INFO: "+msg)
}

func (m *BehavioralMockLogger) Infof(format string, args ...interface{}) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, fmt.Sprintf("INFO: "+format, args...))
}

func (m *BehavioralMockLogger) Warn(msg string) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, "WARN: "+msg)
}

func (m *BehavioralMockLogger) Warnf(format string, args ...interface{}) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, fmt.Sprintf("WARN: "+format, args...))
}

func (m *BehavioralMockLogger) Error(msg string) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, "ERROR: "+msg)
}

func (m *BehavioralMockLogger) Errorf(format string, args ...interface{}) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, fmt.Sprintf("ERROR: "+format, args...))
}

func (m *BehavioralMockLogger) Fatal(msg string) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, "FATAL: "+msg)
}

func (m *BehavioralMockLogger) Fatalf(format string, args ...interface{}) {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = append(m.logs, fmt.Sprintf("FATAL: "+format, args...))
}

func (m *BehavioralMockLogger) With(args ...interface{}) log.Logger { return m }
func (m *BehavioralMockLogger) Sync() error                         { return nil }
func (m *BehavioralMockLogger) GetZapLogger() *zap.Logger           { return zap.NewNop() }

// GetLogs è·å–æ‰€æœ‰æ—¥å¿—è®°å½•
func (m *BehavioralMockLogger) GetLogs() []string {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	return append([]string{}, m.logs...)
}

// ClearLogs æ¸…ç©ºæ—¥å¿—è®°å½•
func (m *BehavioralMockLogger) ClearLogs() {
	m.mutex.Lock()
	defer m.mutex.Unlock()
	m.logs = m.logs[:0]
}

// MockUTXOQuery æ¨¡æ‹Ÿ UTXO æŸ¥è¯¢æœåŠ¡
type MockUTXOQuery struct {
	utxos map[string]*utxopb.UTXO // key: txid:index
}

// NewMockUTXOQuery åˆ›å»ºæ¨¡æ‹Ÿ UTXO æŸ¥è¯¢æœåŠ¡
func NewMockUTXOQuery() *MockUTXOQuery {
	return &MockUTXOQuery{
		utxos: make(map[string]*utxopb.UTXO),
	}
}

// AddUTXO æ·»åŠ  UTXO åˆ°æ¨¡æ‹ŸæŸ¥è¯¢æœåŠ¡
func (m *MockUTXOQuery) AddUTXO(utxo *utxopb.UTXO) {
	key := fmt.Sprintf("%x:%d", utxo.Outpoint.TxId, utxo.Outpoint.OutputIndex)
	m.utxos[key] = utxo
}

// GetUTXO å®ç° persistence.UTXOQuery æ¥å£
func (m *MockUTXOQuery) GetUTXO(ctx context.Context, outpoint *transaction.OutPoint) (*utxopb.UTXO, error) {
	key := fmt.Sprintf("%x:%d", outpoint.TxId, outpoint.OutputIndex)
	utxo, ok := m.utxos[key]
	if !ok {
		return nil, fmt.Errorf("UTXO not found: %s", key)
	}
	return utxo, nil
}

// GetCurrentStateRoot å®ç° persistence.UTXOQuery æ¥å£
func (m *MockUTXOQuery) GetCurrentStateRoot(ctx context.Context) ([]byte, error) {
	// ç®€åŒ–å®ç°ï¼šè¿”å›å›ºå®šå€¼
	return []byte("mock-state-root"), nil
}

// GetUTXOsByAddress å®ç° persistence.UTXOQuery æ¥å£
func (m *MockUTXOQuery) GetUTXOsByAddress(ctx context.Context, address []byte, category *utxopb.UTXOCategory, onlyAvailable bool) ([]*utxopb.UTXO, error) {
	var result []*utxopb.UTXO
	for _, utxo := range m.utxos {
		if len(utxo.OwnerAddress) > 0 && len(address) > 0 {
			if string(utxo.OwnerAddress) == string(address) {
				if onlyAvailable {
					if utxo.GetStatus() == utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE {
						result = append(result, utxo)
					}
				} else {
					result = append(result, utxo)
				}
			}
		}
	}
	return result, nil
}

// GetSponsorPoolUTXOs å®ç° persistence.UTXOQuery æ¥å£
func (m *MockUTXOQuery) GetSponsorPoolUTXOs(ctx context.Context, onlyAvailable bool) ([]*utxopb.UTXO, error) {
	var result []*utxopb.UTXO
	for _, utxo := range m.utxos {
		// æ£€æŸ¥æ˜¯å¦ä¸ºèµåŠ©æ±  UTXOï¼ˆOwnerAddress ä¸º SponsorPoolOwnerï¼‰
		if len(utxo.OwnerAddress) > 0 && len(constants.SponsorPoolOwner[:]) > 0 {
			if string(utxo.OwnerAddress) == string(constants.SponsorPoolOwner[:]) {
				if onlyAvailable {
					if utxo.GetStatus() == utxopb.UTXOLifecycleStatus_UTXO_LIFECYCLE_AVAILABLE {
						result = append(result, utxo)
					}
				} else {
					result = append(result, utxo)
				}
			}
		}
	}
	return result, nil
}

// AddSponsorPoolUTXO æ·»åŠ èµåŠ©æ±  UTXOï¼ˆä¾¿åˆ©æ–¹æ³•ï¼‰
func (m *MockUTXOQuery) AddSponsorPoolUTXO(utxo *utxopb.UTXO) {
	m.AddUTXO(utxo)
}

// MockTxPool æ¨¡æ‹Ÿäº¤æ˜“æ± 
type MockTxPool struct {
	txs map[string]*transaction.Transaction // key: txid
}

// NewMockTxPool åˆ›å»ºæ¨¡æ‹Ÿäº¤æ˜“æ± 
func NewMockTxPool() *MockTxPool {
	return &MockTxPool{
		txs: make(map[string]*transaction.Transaction),
	}
}

// SubmitTx å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) SubmitTx(tx *transaction.Transaction) ([]byte, error) {
	// ç®€å•æ¨¡æ‹Ÿï¼šå­˜å‚¨äº¤æ˜“ï¼ˆæ³¨æ„ï¼šå®é™… Transaction å¯èƒ½æ²¡æœ‰ Hash å­—æ®µï¼Œè¿™é‡Œç®€åŒ–å¤„ç†ï¼‰
	// ä½¿ç”¨äº¤æ˜“çš„åºåˆ—åŒ–ä½œä¸º key
	txid := fmt.Sprintf("%x", tx.Inputs)
	if len(tx.Inputs) > 0 && tx.Inputs[0].PreviousOutput != nil {
		txid = fmt.Sprintf("%x", tx.Inputs[0].PreviousOutput.TxId)
	}
	m.txs[txid] = tx
	// è¿”å›æ¨¡æ‹Ÿçš„äº¤æ˜“å“ˆå¸Œ
	return []byte(txid), nil
}

// SubmitTxs å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) SubmitTxs(txs []*transaction.Transaction) ([][]byte, error) {
	var txHashes [][]byte
	for _, tx := range txs {
		txHash, err := m.SubmitTx(tx)
		if err != nil {
			return nil, err
		}
		txHashes = append(txHashes, txHash)
	}
	return txHashes, nil
}

// GetTransactionsForMining å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetTransactionsForMining() ([]*transaction.Transaction, error) {
	var result []*transaction.Transaction
	for _, tx := range m.txs {
		result = append(result, tx)
	}
	return result, nil
}

// MarkTransactionsAsMining å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) MarkTransactionsAsMining(txIDs [][]byte) error {
	return nil
}

// ConfirmTransactions å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) ConfirmTransactions(txIDs [][]byte, blockHeight uint64) error {
	for _, txID := range txIDs {
		txid := fmt.Sprintf("%x", txID)
		delete(m.txs, txid)
	}
	return nil
}

// RejectTransactions å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) RejectTransactions(txIDs [][]byte) error {
	return nil
}

// MarkTransactionsAsPendingConfirm å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) MarkTransactionsAsPendingConfirm(txIDs [][]byte, blockHeight uint64) error {
	return nil
}

// SyncStatus å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) SyncStatus(height uint64, stateRoot []byte) error {
	return nil
}

// UpdateTransactionStatus å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) UpdateTransactionStatus(txID []byte, status types.TxStatus) error {
	return nil
}

// GetAllPendingTransactions å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetAllPendingTransactions() ([]*transaction.Transaction, error) {
	var result []*transaction.Transaction
	for _, tx := range m.txs {
		result = append(result, tx)
	}
	return result, nil
}

// GetTx å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetTx(txID []byte) (*transaction.Transaction, error) {
	txid := fmt.Sprintf("%x", txID)
	tx, ok := m.txs[txid]
	if !ok {
		return nil, fmt.Errorf("transaction not found")
	}
	return tx, nil
}

// GetTxStatus å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetTxStatus(txID []byte) (types.TxStatus, error) {
	txid := fmt.Sprintf("%x", txID)
	if _, ok := m.txs[txid]; ok {
		return types.TxStatusPending, nil
	}
	return types.TxStatusUnknown, fmt.Errorf("transaction not found")
}

// GetPoolStats å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetPoolStats() (map[string]interface{}, error) {
	return map[string]interface{}{
		"total_transactions": len(m.txs),
	}, nil
}

// GetTransactionsByStatus å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetTransactionsByStatus(status types.TxStatus) ([]*transaction.Transaction, error) {
	var result []*transaction.Transaction
	for _, tx := range m.txs {
		result = append(result, tx)
	}
	return result, nil
}

// GetPendingTransactions å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetPendingTransactions() ([]*transaction.Transaction, error) {
	return m.GetAllPendingTransactions()
}

// GetTransactionByID å®ç° mempool.TxPool æ¥å£
func (m *MockTxPool) GetTransactionByID(txID []byte) (*transaction.Transaction, error) {
	return m.GetTx(txID)
}

// MockDraftService æ¨¡æ‹Ÿè‰ç¨¿æœåŠ¡
type MockDraftService struct {
	drafts map[string]*types.DraftTx
}

// NewMockDraftService åˆ›å»ºæ¨¡æ‹Ÿè‰ç¨¿æœåŠ¡
func NewMockDraftService() *MockDraftService {
	return &MockDraftService{
		drafts: make(map[string]*types.DraftTx),
	}
}

// CreateDraft å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) CreateDraft(ctx context.Context) (*types.DraftTx, error) {
	draft := &types.DraftTx{
		Tx: &transaction.Transaction{
			Version: 1,
			Inputs:  make([]*transaction.TxInput, 0),
			Outputs: make([]*transaction.TxOutput, 0),
		},
	}
	// ç®€å•æ¨¡æ‹Ÿï¼šç”Ÿæˆä¸€ä¸ª ID
	draftID := fmt.Sprintf("draft-%d", len(m.drafts))
	m.drafts[draftID] = draft
	return draft, nil
}

// LoadDraft å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) LoadDraft(ctx context.Context, draftID string) (*types.DraftTx, error) {
	draft, ok := m.drafts[draftID]
	if !ok {
		return nil, fmt.Errorf("draft not found: %s", draftID)
	}
	return draft, nil
}

// SaveDraft å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) SaveDraft(ctx context.Context, draft *types.DraftTx) error {
	// ç®€å•æ¨¡æ‹Ÿï¼šå­˜å‚¨è‰ç¨¿
	draftID := fmt.Sprintf("draft-%d", len(m.drafts))
	m.drafts[draftID] = draft
	return nil
}

// DeleteDraft å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) DeleteDraft(ctx context.Context, draftID string) error {
	delete(m.drafts, draftID)
	return nil
}

// SealDraft å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) SealDraft(ctx context.Context, draft *types.DraftTx) (*types.ComposedTx, error) {
	return &types.ComposedTx{
		Tx:     draft.Tx,
		Sealed: true,
	}, nil
}

// AddInput å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) AddInput(ctx context.Context, draft *types.DraftTx, outpoint *transaction.OutPoint, isReferenceOnly bool, unlockingProof *transaction.UnlockingProof) (uint32, error) {
	input := &transaction.TxInput{
		PreviousOutput:  outpoint,
		IsReferenceOnly: isReferenceOnly,
	}
	if unlockingProof != nil {
		// è®¾ç½® UnlockingProofï¼ˆä½¿ç”¨ oneofï¼‰
		if singleKeyProof := unlockingProof.GetSingleKeyProof(); singleKeyProof != nil {
			input.UnlockingProof = &transaction.TxInput_SingleKeyProof{
				SingleKeyProof: singleKeyProof,
			}
		}
	}
	draft.Tx.Inputs = append(draft.Tx.Inputs, input)
	return uint32(len(draft.Tx.Inputs) - 1), nil
}

// AddAssetOutput å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) AddAssetOutput(ctx context.Context, draft *types.DraftTx, owner []byte, amount string, tokenID []byte, lockingConditions []*transaction.LockingCondition) (uint32, error) {
	var assetOutput *transaction.AssetOutput
	if tokenID == nil {
		assetOutput = &transaction.AssetOutput{
			AssetContent: &transaction.AssetOutput_NativeCoin{
				NativeCoin: &transaction.NativeCoinAsset{
					Amount: amount,
				},
			},
		}
	} else {
		assetOutput = &transaction.AssetOutput{
			AssetContent: &transaction.AssetOutput_ContractToken{
				ContractToken: &transaction.ContractTokenAsset{
					ContractAddress: tokenID,
					TokenIdentifier: &transaction.ContractTokenAsset_FungibleClassId{
						FungibleClassId: []byte("default"),
					},
					Amount: amount,
				},
			},
		}
	}
	output := &transaction.TxOutput{
		Owner:             owner,
		LockingConditions: lockingConditions,
		OutputContent: &transaction.TxOutput_Asset{
			Asset: assetOutput,
		},
	}
	draft.Tx.Outputs = append(draft.Tx.Outputs, output)
	return uint32(len(draft.Tx.Outputs) - 1), nil
}

// AddResourceOutput å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) AddResourceOutput(ctx context.Context, draft *types.DraftTx, contentHash []byte, category string, owner []byte, lockingConditions []*transaction.LockingCondition, metadata []byte) (uint32, error) {
	// ç®€åŒ–å®ç°
	output := &transaction.TxOutput{
		Owner:             owner,
		LockingConditions: lockingConditions,
	}
	draft.Tx.Outputs = append(draft.Tx.Outputs, output)
	return uint32(len(draft.Tx.Outputs) - 1), nil
}

// AddStateOutput å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) AddStateOutput(ctx context.Context, draft *types.DraftTx, stateID []byte, stateVersion uint64, executionResultHash []byte, publicInputs []byte, parentStateHash []byte) (uint32, error) {
	// ç®€åŒ–å®ç°
	output := &transaction.TxOutput{
		Owner: make([]byte, 20),
	}
	draft.Tx.Outputs = append(draft.Tx.Outputs, output)
	return uint32(len(draft.Tx.Outputs) - 1), nil
}

// GetDraftByID å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) GetDraftByID(ctx context.Context, draftID string) (*types.DraftTx, error) {
	return m.LoadDraft(ctx, draftID)
}

// ValidateDraft å®ç° tx.TransactionDraftService æ¥å£
func (m *MockDraftService) ValidateDraft(ctx context.Context, draft *types.DraftTx) error {
	if draft == nil {
		return fmt.Errorf("draft is nil")
	}
	if draft.Tx == nil {
		return fmt.Errorf("draft.Tx is nil")
	}
	return nil
}

// MockProofProvider æ¨¡æ‹Ÿè¯æ˜æä¾›è€…
type MockProofProvider struct {
	proofs map[int]*transaction.UnlockingProof // key: input index
}

// NewMockProofProvider åˆ›å»ºæ¨¡æ‹Ÿè¯æ˜æä¾›è€…
func NewMockProofProvider() *MockProofProvider {
	return &MockProofProvider{
		proofs: make(map[int]*transaction.UnlockingProof),
	}
}

// SetProof è®¾ç½®æŒ‡å®šè¾“å…¥çš„è¯æ˜
func (m *MockProofProvider) SetProof(inputIndex int, proof *transaction.UnlockingProof) {
	m.proofs[inputIndex] = proof
}

// ProvideProofs å®ç° tx.ProofProvider æ¥å£
func (m *MockProofProvider) ProvideProofs(
	ctx context.Context,
	tx *transaction.Transaction,
) error {
	for i, input := range tx.Inputs {
		proof, ok := m.proofs[i]
		if !ok {
			return fmt.Errorf("proof not found for input %d", i)
		}
		// è®¾ç½® UnlockingProofï¼ˆä½¿ç”¨ oneofï¼‰
		if singleKeyProof := proof.GetSingleKeyProof(); singleKeyProof != nil {
			input.UnlockingProof = &transaction.TxInput_SingleKeyProof{
				SingleKeyProof: singleKeyProof,
			}
		}
	}
	return nil
}

// MockSigner æ¨¡æ‹Ÿç­¾åå™¨
type MockSigner struct {
	publicKey []byte
}

// NewMockSigner åˆ›å»ºæ¨¡æ‹Ÿç­¾åå™¨
func NewMockSigner(publicKey []byte) *MockSigner {
	if publicKey == nil {
		publicKey = RandomPublicKey()
	}
	return &MockSigner{
		publicKey: publicKey,
	}
}

// Sign å®ç° tx.Signer æ¥å£
func (m *MockSigner) Sign(ctx context.Context, tx *transaction.Transaction) (*transaction.SignatureData, error) {
	return &transaction.SignatureData{
		Value: []byte("mock-signature"),
	}, nil
}

// PublicKey å®ç° tx.Signer æ¥å£
func (m *MockSigner) PublicKey() (*transaction.PublicKey, error) {
	return &transaction.PublicKey{
		Value: m.publicKey,
	}, nil
}

// Algorithm å®ç° tx.Signer æ¥å£
func (m *MockSigner) Algorithm() transaction.SignatureAlgorithm {
	return transaction.SignatureAlgorithm_SIGNATURE_ALGORITHM_ECDSA_SECP256K1
}

// SignBytes å®ç° tx.Signer æ¥å£
func (m *MockSigner) SignBytes(ctx context.Context, data []byte) ([]byte, error) {
	return []byte("mock-signature-bytes"), nil
}

// ==================== Crypto Mock å¯¹è±¡ï¼ˆä¾›å…¶ä»–æµ‹è¯•ä½¿ç”¨ï¼‰====================

// MockSignatureManager æ¨¡æ‹Ÿ SignatureManagerï¼ˆä¾›å…¶ä»–æµ‹è¯•ä½¿ç”¨ï¼‰
type MockSignatureManager struct {
	signature []byte
}

func (m *MockSignatureManager) Sign(data []byte, privateKey []byte) ([]byte, error) {
	if m.signature != nil {
		return m.signature, nil
	}
	return []byte("mock-signature"), nil
}

func (m *MockSignatureManager) Verify(data, signature, publicKey []byte) bool {
	return true
}

func (m *MockSignatureManager) RecoverPublicKey(hash []byte, signature []byte) ([]byte, error) {
	return RandomPublicKey(), nil
}

func (m *MockSignatureManager) NormalizeSignature(signature []byte) ([]byte, error) {
	return signature, nil
}

func (m *MockSignatureManager) SignTransaction(txHash []byte, privateKey []byte, sigHashType crypto.SignatureHashType) ([]byte, error) {
	return m.Sign(txHash, privateKey)
}

func (m *MockSignatureManager) VerifyTransactionSignature(txHash []byte, signature []byte, publicKey []byte, sigHashType crypto.SignatureHashType) bool {
	return m.Verify(txHash, signature, publicKey)
}

func (m *MockSignatureManager) SignMessage(message []byte, privateKey []byte) ([]byte, error) {
	return m.Sign(message, privateKey)
}

func (m *MockSignatureManager) VerifyMessage(message []byte, signature []byte, publicKey []byte) bool {
	return m.Verify(message, signature, publicKey)
}

func (m *MockSignatureManager) ValidateSignature(signature []byte) error {
	if len(signature) == 0 {
		return fmt.Errorf("signature is empty")
	}
	return nil
}

func (m *MockSignatureManager) VerifyBatch(dataList [][]byte, signatureList [][]byte, publicKeyList [][]byte) ([]bool, error) {
	results := make([]bool, len(dataList))
	for i := range dataList {
		results[i] = m.Verify(dataList[i], signatureList[i], publicKeyList[i])
	}
	return results, nil
}

func (m *MockSignatureManager) RecoverAddress(hash []byte, signature []byte) (string, error) {
	pubKey, err := m.RecoverPublicKey(hash, signature)
	if err != nil {
		return "", err
	}
	// ç®€åŒ–å®ç°ï¼šè¿”å›å…¬é’¥çš„åå…­è¿›åˆ¶å­—ç¬¦ä¸²ä½œä¸ºåœ°å€
	return fmt.Sprintf("%x", pubKey), nil
}

func (m *MockSignatureManager) SignBatch(dataList [][]byte, privateKey []byte) ([][]byte, error) {
	signatures := make([][]byte, len(dataList))
	for i, data := range dataList {
		sig, err := m.Sign(data, privateKey)
		if err != nil {
			return nil, err
		}
		signatures[i] = sig
	}
	return signatures, nil
}

// MockHashManager ç»Ÿä¸€çš„å“ˆå¸Œç®¡ç†å™¨Mockå®ç°
//
// âœ… **è®¾è®¡åŸåˆ™**ï¼šä½¿ç”¨çœŸå®çš„SHA256ç®—æ³•ï¼Œç¡®ä¿å“ˆå¸Œè®¡ç®—æ­£ç¡®
// ğŸ“‹ **ä½¿ç”¨åœºæ™¯**ï¼šæ‰€æœ‰éœ€è¦å“ˆå¸Œè®¡ç®—çš„æµ‹è¯•
type MockHashManager struct{}

func (m *MockHashManager) SHA256(data []byte) []byte {
	h := sha256.Sum256(data)
	return h[:]
}

func (m *MockHashManager) Keccak256(data []byte) []byte {
	return m.SHA256(data) // ç®€åŒ–å®ç°ï¼Œä½¿ç”¨SHA256
}

func (m *MockHashManager) RIPEMD160(data []byte) []byte {
	hash := make([]byte, 20)
	copy(hash, m.SHA256(data)[:20])
	return hash
}

func (m *MockHashManager) DoubleSHA256(data []byte) []byte {
	first := m.SHA256(data)
	return m.SHA256(first)
}

func (m *MockHashManager) NewSHA256Hasher() hash.Hash {
	return sha256.New()
}

func (m *MockHashManager) NewRIPEMD160Hasher() hash.Hash {
	return sha256.New() // ç®€åŒ–å®ç°ï¼Œè¿”å›SHA256çš„hasher
}

// MockCanonicalizer æ¨¡æ‹Ÿ Canonicalizerï¼ˆä¾›å…¶ä»–æµ‹è¯•ä½¿ç”¨ï¼‰
// æ³¨æ„ï¼šè¿™æ˜¯ä¸€ä¸ªç®€åŒ–çš„å®ç°ï¼Œå®é™…åº”è¯¥ä½¿ç”¨ hash.Canonicalizer
type MockCanonicalizer struct {
	txHash  []byte
	sigHash []byte
}

func (m *MockCanonicalizer) ComputeTransactionHash(ctx context.Context, tx *transaction.Transaction) ([]byte, error) {
	if m.txHash != nil {
		return m.txHash, nil
	}
	return RandomTxID(), nil
}

func (m *MockCanonicalizer) ComputeSignatureHash(ctx context.Context, tx *transaction.Transaction, inputIndex int, sigHashType transaction.SignatureHashType) ([]byte, error) {
	if m.sigHash != nil {
		return m.sigHash, nil
	}
	return RandomTxID(), nil
}

// MockAddressManager æ¨¡æ‹Ÿ AddressManagerï¼ˆä¾›æµ‹è¯•ä½¿ç”¨ï¼‰
type MockAddressManager struct{}

func (m *MockAddressManager) PrivateKeyToAddress(privateKey []byte) (string, error) {
	if len(privateKey) != 32 {
		return "", fmt.Errorf("invalid private key length")
	}
	// ç®€åŒ–å®ç°ï¼šåŸºäºç§é’¥å“ˆå¸Œç”Ÿæˆåœ°å€å­—ç¬¦ä¸²
	hash := sha256.Sum256(privateKey)
	return fmt.Sprintf("Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPm%x", hash[:8]), nil
}

func (m *MockAddressManager) PublicKeyToAddress(publicKey []byte) (string, error) {
	if len(publicKey) != 33 && len(publicKey) != 64 {
		return "", fmt.Errorf("invalid public key length")
	}
	// ç®€åŒ–å®ç°ï¼šåŸºäºå…¬é’¥å“ˆå¸Œç”Ÿæˆåœ°å€å­—ç¬¦ä¸²ï¼Œç¡®ä¿ä¸€è‡´æ€§
	hash := sha256.Sum256(publicKey)
	return fmt.Sprintf("Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPm%x", hash[:8]), nil
}

func (m *MockAddressManager) StringToAddress(addressStr string) (string, error) {
	if addressStr == "" {
		return "", fmt.Errorf("empty address string")
	}
	return addressStr, nil
}

func (m *MockAddressManager) ValidateAddress(address string) (bool, error) {
	if address == "" {
		return false, fmt.Errorf("empty address")
	}
	return true, nil
}

func (m *MockAddressManager) AddressToBytes(address string) ([]byte, error) {
	if address == "" {
		return nil, fmt.Errorf("empty address")
	}
	// ç®€åŒ–å®ç°ï¼šä»åœ°å€å­—ç¬¦ä¸²ç”Ÿæˆ20å­—èŠ‚å“ˆå¸Œ
	hash := sha256.Sum256([]byte(address))
	return hash[:20], nil
}

func (m *MockAddressManager) BytesToAddress(addressBytes []byte) (string, error) {
	if len(addressBytes) != 20 {
		return "", fmt.Errorf("invalid address bytes length")
	}
	// ç®€åŒ–å®ç°ï¼šè¿”å›ä¸€ä¸ªå›ºå®šçš„æµ‹è¯•åœ°å€
	return "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn", nil
}

func (m *MockAddressManager) AddressToHexString(address string) (string, error) {
	if address == "" {
		return "", fmt.Errorf("empty address")
	}
	// ç®€åŒ–å®ç°ï¼šè¿”å›40å­—ç¬¦çš„åå…­è¿›åˆ¶å­—ç¬¦ä¸²
	return "0000000000000000000000000000000000000000", nil
}

func (m *MockAddressManager) HexStringToAddress(hexStr string) (string, error) {
	if hexStr == "" {
		return "", fmt.Errorf("empty hex string")
	}
	// ç®€åŒ–å®ç°ï¼šè¿”å›ä¸€ä¸ªå›ºå®šçš„æµ‹è¯•åœ°å€
	return "Cf1Kes6snEUeykiJJgrAtKPNPrAzPdPmSn", nil
}

func (m *MockAddressManager) GetAddressType(address string) (types.AddressType, error) {
	if address == "" {
		return types.AddressTypeInvalid, fmt.Errorf("empty address")
	}
	return types.AddressTypeBitcoin, nil
}

func (m *MockAddressManager) CompareAddresses(addr1, addr2 string) (bool, error) {
	if addr1 == "" || addr2 == "" {
		return false, fmt.Errorf("empty address")
	}
	return addr1 == addr2, nil
}

func (m *MockAddressManager) IsZeroAddress(address string) bool {
	return address == "" || address == "0000000000000000000000000000000000000000"
}

func min(a, b int) int {
	if a < b {
		return a
	}
	return b
}
